pushing new app rsult

--- a/AppResOutput/abccare_appendix/current/rslt_female_cat4_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat4_sd.tex
@@ -6,39 +6,39 @@
 
     \mc{1}{l}{\scriptsize{Parental Labor Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{2,248}} & \mc{1}{c}{\scriptsize{2,885}} & \mc{1}{c}{\scriptsize{2,860}} & \mc{1}{c}{\scriptsize{4,969}} & \mc{1}{c}{\scriptsize{9,700}} & \mc{1}{c}{\scriptsize{2,177}} & \mc{1}{c}{\scriptsize{2,354}} & \mc{1}{c}{\scriptsize{7,337}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.353)}} & \mc{1}{c}{\scriptsize{(2.284)}} & \mc{1}{c}{\scriptsize{(4.382)}} & \mc{1}{c}{\scriptsize{(4.127)}} & \mc{1}{c}{\scriptsize{(0.775)}} & \mc{1}{c}{\scriptsize{(3.814)}} & \mc{1}{c}{\scriptsize{(3.353)}} & \mc{1}{c}{\scriptsize{(0.775)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.233)}} & \mc{1}{c}{\scriptsize{(0.446)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} \\  
 
      & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{516}} & \mc{1}{c}{\scriptsize{73.158}} & \mc{1}{c}{\scriptsize{-2,177}} & \mc{1}{c}{\scriptsize{-287}} & \mc{1}{c}{\scriptsize{1,764}} & \mc{1}{c}{\scriptsize{1,266}} & \mc{1}{c}{\scriptsize{36.760}} & \mc{1}{c}{\scriptsize{3,233}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.922)}} & \mc{1}{c}{\scriptsize{(6.265)}} & \mc{1}{c}{\scriptsize{(5.088)}} & \mc{1}{c}{\scriptsize{(4.775)}} & \mc{1}{c}{\scriptsize{(5.686)}} & \mc{1}{c}{\scriptsize{(4.461)}} & \mc{1}{c}{\scriptsize{(5.647)}} & \mc{1}{c}{\scriptsize{(4.980)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.518)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.454)}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
      & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{1,821}} & \mc{1}{c}{\scriptsize{1,391}} & \mc{1}{c}{\scriptsize{4,270}} & \mc{1}{c}{\scriptsize{5,404}} & \mc{1}{c}{\scriptsize{8,601}} & \mc{1}{c}{\scriptsize{1,247}} & \mc{1}{c}{\scriptsize{215}} & \mc{1}{c}{\scriptsize{3,762}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.510)}} & \mc{1}{c}{\scriptsize{(4.471)}} & \mc{1}{c}{\scriptsize{(2.373)}} & \mc{1}{c}{\scriptsize{(3.627)}} & \mc{1}{c}{\scriptsize{(1.382)}} & \mc{1}{c}{\scriptsize{(4.461)}} & \mc{1}{c}{\scriptsize{(5.647)}} & \mc{1}{c}{\scriptsize{(4.784)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.357)}} & \mc{1}{c}{\scriptsize{(0.455)}} & \mc{1}{c}{\scriptsize{(0.242)}} & \mc{1}{c}{\scriptsize{(0.369)}} & \mc{1}{c}{\scriptsize{(0.141)}} & \mc{1}{c}{\scriptsize{(0.454)}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.487)}} \\  
 
      & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{2,336}} & \mc{1}{c}{\scriptsize{3,423}} & \mc{1}{c}{\scriptsize{4,473}} & \mc{1}{c}{\scriptsize{3,707}} & \mc{1}{c}{\scriptsize{8,946}} & \mc{1}{c}{\scriptsize{1,747}} & \mc{1}{c}{\scriptsize{2,723}} & \mc{1}{c}{\scriptsize{6,036}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.353)}} & \mc{1}{c}{\scriptsize{(1.971)}} & \mc{1}{c}{\scriptsize{(2.284)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{(1.069)}} & \mc{1}{c}{\scriptsize{(4.461)}} & \mc{1}{c}{\scriptsize{(3.353)}} & \mc{1}{c}{\scriptsize{(1.510)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.201)}} & \mc{1}{c}{\scriptsize{(0.233)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{(0.454)}} & \mc{1}{c}{\scriptsize{(0.341)}} & \mc{1}{c}{\scriptsize{(0.154)}} \\  
 
      & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{7,044}} & \mc{1}{c}{\scriptsize{8,365}} & \mc{1}{c}{\scriptsize{8,515}} & \mc{1}{c}{\scriptsize{5,050}} & \mc{1}{c}{\scriptsize{13,434}} & \mc{1}{c}{\scriptsize{6,708}} & \mc{1}{c}{\scriptsize{8,620}} & \mc{1}{c}{\scriptsize{2,974}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.127)}} & \mc{1}{c}{\scriptsize{(1.892)}} & \mc{1}{c}{\scriptsize{(2.225)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{(1.069)}} & \mc{1}{c}{\scriptsize{(1.627)}} & \mc{1}{c}{\scriptsize{(1.971)}} & \mc{1}{c}{\scriptsize{(4.980)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.115)}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.227)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.109)}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.201)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
      & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{10,100}} & \mc{1}{c}{\scriptsize{14,358}} & \mc{1}{c}{\scriptsize{18,585}} & \mc{1}{c}{\scriptsize{26,430}} & \mc{1}{c}{\scriptsize{26,474}} & \mc{1}{c}{\scriptsize{7,929}} & \mc{1}{c}{\scriptsize{10,810}} & \mc{1}{c}{\scriptsize{18,629}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.814)}} & \mc{1}{c}{\scriptsize{(0.196)}} & \mc{1}{c}{\scriptsize{(0.196)}} & \mc{1}{c}{\scriptsize{(0.471)}} & \mc{1}{c}{\scriptsize{(0.333)}} & \mc{1}{c}{\scriptsize{(1.627)}} & \mc{1}{c}{\scriptsize{(1.088)}} & \mc{1}{c}{\scriptsize{(1.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.048)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.034)}}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.111)}} & \mc{1}{c}{\scriptsize{(0.115)}} \\  
 
      & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{9,596}} & \mc{1}{c}{\scriptsize{7,747}} & \mc{1}{c}{\scriptsize{5,132}} & \mc{1}{c}{\scriptsize{10,827}} & \mc{1}{c}{\scriptsize{8,435}} & \mc{1}{c}{\scriptsize{10,155}} & \mc{1}{c}{\scriptsize{6,456}} & \mc{1}{c}{\scriptsize{10,480}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.706)}} & \mc{1}{c}{\scriptsize{(1.892)}} & \mc{1}{c}{\scriptsize{(5.088)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{(5.686)}} & \mc{1}{c}{\scriptsize{(0.520)}} & \mc{1}{c}{\scriptsize{(2.647)}} & \mc{1}{c}{\scriptsize{(2.275)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.518)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.269)}} & \mc{1}{c}{\scriptsize{(0.232)}} \\  
 
      & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{9,008}} & \mc{1}{c}{\scriptsize{8,489}} & \mc{1}{c}{\scriptsize{10,316}} & \mc{1}{c}{\scriptsize{12,798}} & \mc{1}{c}{\scriptsize{25,135}} & \mc{1}{c}{\scriptsize{9,461}} & \mc{1}{c}{\scriptsize{8,813}} & \mc{1}{c}{\scriptsize{3,926}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.706)}} & \mc{1}{c}{\scriptsize{(1.892)}} & \mc{1}{c}{\scriptsize{(9.784)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(0.520)}} & \mc{1}{c}{\scriptsize{(1.382)}} & \mc{1}{c}{\scriptsize{(4.980)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.072)}}} & \mc{1}{c}{\scriptsize{(0.193)}} & \mc{1}{c}{\scriptsize{(0.996)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.141)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
     \mc{1}{l}{\scriptsize{Parental Income Factor}} & \mc{1}{c}{\scriptsize{1.5 to 21}} & \mc{1}{c}{\scriptsize{0.074}} & \mc{1}{c}{\scriptsize{-0.008}} & \mc{1}{c}{\scriptsize{0.450}} & \mc{1}{c}{\scriptsize{0.663}} & \mc{1}{c}{\scriptsize{0.635}} & \mc{1}{c}{\scriptsize{0.013}} & \mc{1}{c}{\scriptsize{-0.069}} & \mc{1}{c}{\scriptsize{0.297}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.922)}} & \mc{1}{c}{\scriptsize{(6.265)}} & \mc{1}{c}{\scriptsize{(9.784)}} & \mc{1}{c}{\scriptsize{(4.775)}} & \mc{1}{c}{\scriptsize{(3.216)}} & \mc{1}{c}{\scriptsize{(4.706)}} & \mc{1}{c}{\scriptsize{(5.647)}} & \mc{1}{c}{\scriptsize{(4.980)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.638)}} & \mc{1}{c}{\scriptsize{(0.996)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.327)}} & \mc{1}{c}{\scriptsize{(0.479)}} & \mc{1}{c}{\scriptsize{(0.575)}} & \mc{1}{c}{\scriptsize{(0.507)}} \\  
 
   \bottomrule
   \end{tabular}
