--- a/AppResOutput/abccare_appendix/current/rslt_male_cat13_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat13_sd.tex
@@ -6,19 +6,19 @@
 
     \mc{1}{l}{\scriptsize{Hemoglobin Level (\%)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.277}} & \mc{1}{c}{\scriptsize{-0.040}} & \mc{1}{c}{\scriptsize{-0.176}} & \mc{1}{c}{\scriptsize{0.017}} & \mc{1}{c}{\scriptsize{0.359}} & \mc{1}{c}{\scriptsize{-0.305}} & \mc{1}{c}{\scriptsize{-0.008}} & \mc{1}{c}{\scriptsize{0.417}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.775)}} & \mc{1}{c}{\scriptsize{(4.902)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(4.686)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(3.157)}} & \mc{1}{c}{\scriptsize{(5.029)}} & \mc{1}{c}{\scriptsize{(3.627)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.282)}} & \mc{1}{c}{\scriptsize{(0.499)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.477)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.321)}} & \mc{1}{c}{\scriptsize{(0.512)}} & \mc{1}{c}{\scriptsize{(0.369)}} \\  
 
     \mc{1}{l}{\scriptsize{Prediabetes}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.088}} & \mc{1}{c}{\scriptsize{0.174}} & \mc{1}{c}{\scriptsize{0.076}} & \mc{1}{c}{\scriptsize{0.285}} & \mc{1}{c}{\scriptsize{-0.308}} & \mc{1}{c}{\scriptsize{0.091}} & \mc{1}{c}{\scriptsize{0.163}} & \mc{1}{c}{\scriptsize{-0.142}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.118)}} & \mc{1}{c}{\scriptsize{(2.471)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(1.098)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(3.157)}} & \mc{1}{c}{\scriptsize{(3.039)}} & \mc{1}{c}{\scriptsize{(3.627)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.251)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.321)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.369)}} \\  
 
     \mc{1}{l}{\scriptsize{Diabetes}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.071}} & \mc{1}{c}{\scriptsize{-0.037}} &  &  & \mc{1}{c}{\scriptsize{0.095}} & \mc{1}{c}{\scriptsize{-0.091}} & \mc{1}{c}{\scriptsize{-0.045}} & \mc{1}{c}{\scriptsize{0.095}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.216)}} & \mc{1}{c}{\scriptsize{(2.471)}} &  &  & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{(1.167)}} & \mc{1}{c}{\scriptsize{(3.039)}} & \mc{1}{c}{\scriptsize{(1.010)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.124)}} & \mc{1}{c}{\scriptsize{(0.251)}} &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.103)}} \\  
 
     \mc{1}{l}{\scriptsize{Diabetes Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.207}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{-0.024}} & \mc{1}{c}{\scriptsize{0.141}} & \mc{1}{c}{\scriptsize{0.163}} & \mc{1}{c}{\scriptsize{-0.257}} & \mc{1}{c}{\scriptsize{-0.039}} & \mc{1}{c}{\scriptsize{0.259}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.118)}} & \mc{1}{c}{\scriptsize{(4.902)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(4.686)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(3.157)}} & \mc{1}{c}{\scriptsize{(5.029)}} & \mc{1}{c}{\scriptsize{(3.627)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.499)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{(0.477)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.321)}} & \mc{1}{c}{\scriptsize{(0.512)}} & \mc{1}{c}{\scriptsize{(0.369)}} \\  
 
   \bottomrule
   \end{tabular}
