--- a/AppResOutput/abccare_appendix/current/rslt_male_cat2_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat2_sd.tex
@@ -6,31 +6,31 @@
 
     \mc{1}{l}{\scriptsize{HOME Score}} & \mc{1}{c}{\scriptsize{0.5}} & \mc{1}{c}{\scriptsize{1.581}} & \mc{1}{c}{\scriptsize{0.746}} & \mc{1}{c}{\scriptsize{1.684}} & \mc{1}{c}{\scriptsize{2.248}} & \mc{1}{c}{\scriptsize{0.445}} & \mc{1}{c}{\scriptsize{0.980}} & \mc{1}{c}{\scriptsize{0.570}} & \mc{1}{c}{\scriptsize{-0.089}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.176)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(1.637)}} & \mc{1}{c}{\scriptsize{(2.363)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(5.490)}} & \mc{1}{c}{\scriptsize{(6.245)}} & \mc{1}{c}{\scriptsize{(7.971)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.167)}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.811)}} \\  
 
      & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{2.668}} & \mc{1}{c}{\scriptsize{1.582}} & \mc{1}{c}{\scriptsize{4.729}} & \mc{1}{c}{\scriptsize{3.111}} & \mc{1}{c}{\scriptsize{0.244}} & \mc{1}{c}{\scriptsize{1.544}} & \mc{1}{c}{\scriptsize{1.215}} & \mc{1}{c}{\scriptsize{-0.879}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.206)}} & \mc{1}{c}{\scriptsize{(4.686)}} & \mc{1}{c}{\scriptsize{(0.412)}} & \mc{1}{c}{\scriptsize{(2.363)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(4.578)}} & \mc{1}{c}{\scriptsize{(6.069)}} & \mc{1}{c}{\scriptsize{(6.804)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{(0.477)}} & \mc{1}{c}{\scriptsize{\textbf{(0.042)}}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.466)}} & \mc{1}{c}{\scriptsize{(0.618)}} & \mc{1}{c}{\scriptsize{(0.693)}} \\  
 
      & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{0.762}} & \mc{1}{c}{\scriptsize{0.747}} & \mc{1}{c}{\scriptsize{4.434}} & \mc{1}{c}{\scriptsize{6.109}} & \mc{1}{c}{\scriptsize{2.220}} & \mc{1}{c}{\scriptsize{-0.899}} & \mc{1}{c}{\scriptsize{-0.872}} & \mc{1}{c}{\scriptsize{0.140}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.304)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(0.127)}} & \mc{1}{c}{\scriptsize{(0.667)}} & \mc{1}{c}{\scriptsize{(4.961)}} & \mc{1}{c}{\scriptsize{(5.490)}} & \mc{1}{c}{\scriptsize{(6.196)}} & \mc{1}{c}{\scriptsize{(7.971)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.068)}}} & \mc{1}{c}{\scriptsize{(0.505)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.631)}} & \mc{1}{c}{\scriptsize{(0.811)}} \\  
 
      & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2.858}} & \mc{1}{c}{\scriptsize{1.686}} & \mc{1}{c}{\scriptsize{13.719}} & \mc{1}{c}{\scriptsize{16.856}} & \mc{1}{c}{\scriptsize{2.873}} & \mc{1}{c}{\scriptsize{-0.309}} & \mc{1}{c}{\scriptsize{-1.673}} & \mc{1}{c}{\scriptsize{0.728}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.176)}} & \mc{1}{c}{\scriptsize{(6.294)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.275)}} & \mc{1}{c}{\scriptsize{(5.333)}} & \mc{1}{c}{\scriptsize{(6.284)}} & \mc{1}{c}{\scriptsize{(6.196)}} & \mc{1}{c}{\scriptsize{(7.725)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.028)}}} & \mc{1}{c}{\scriptsize{(0.543)}} & \mc{1}{c}{\scriptsize{(0.640)}} & \mc{1}{c}{\scriptsize{(0.631)}} & \mc{1}{c}{\scriptsize{(0.786)}} \\  
 
      & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{2.736}} & \mc{1}{c}{\scriptsize{1.425}} & \mc{1}{c}{\scriptsize{12.957}} & \mc{1}{c}{\scriptsize{15.238}} & \mc{1}{c}{\scriptsize{2.814}} & \mc{1}{c}{\scriptsize{-0.273}} & \mc{1}{c}{\scriptsize{-0.335}} & \mc{1}{c}{\scriptsize{0.214}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.176)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(0.549)}} & \mc{1}{c}{\scriptsize{(5.206)}} & \mc{1}{c}{\scriptsize{(6.284)}} & \mc{1}{c}{\scriptsize{(6.245)}} & \mc{1}{c}{\scriptsize{(7.971)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.056)}}} & \mc{1}{c}{\scriptsize{(0.530)}} & \mc{1}{c}{\scriptsize{(0.640)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.811)}} \\  
 
      & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{0.659}} & \mc{1}{c}{\scriptsize{0.572}} & \mc{1}{c}{\scriptsize{5.909}} & \mc{1}{c}{\scriptsize{7.605}} & \mc{1}{c}{\scriptsize{-1.555}} & \mc{1}{c}{\scriptsize{-0.773}} & \mc{1}{c}{\scriptsize{-1.183}} & \mc{1}{c}{\scriptsize{0.144}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.304)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(0.882)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(6.167)}} & \mc{1}{c}{\scriptsize{(6.245)}} & \mc{1}{c}{\scriptsize{(7.971)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.090)}}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.628)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.811)}} \\  
 
     \mc{1}{l}{\scriptsize{HOME Factor}} & \mc{1}{c}{\scriptsize{0.5 to 8}} & \mc{1}{c}{\scriptsize{0.266}} & \mc{1}{c}{\scriptsize{0.125}} & \mc{1}{c}{\scriptsize{1.162}} & \mc{1}{c}{\scriptsize{1.014}} & \mc{1}{c}{\scriptsize{0.083}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{-0.054}} & \mc{1}{c}{\scriptsize{0.282}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(2.363)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(6.284)}} & \mc{1}{c}{\scriptsize{(6.245)}} & \mc{1}{c}{\scriptsize{(5.167)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.640)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.526)}} \\  
 
   \bottomrule
   \end{tabular}
