--- a/AppResOutput/abccare_appendix/current/rslt_female_cat14_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat14_sd.tex
@@ -6,31 +6,31 @@
 
     \mc{1}{l}{\scriptsize{Measured BMI}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.999}} & \mc{1}{c}{\scriptsize{2.781}} & \mc{1}{c}{\scriptsize{-0.202}} & \mc{1}{c}{\scriptsize{2.524}} & \mc{1}{c}{\scriptsize{1.978}} & \mc{1}{c}{\scriptsize{1.072}} & \mc{1}{c}{\scriptsize{2.924}} & \mc{1}{c}{\scriptsize{4.711}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.735)}} & \mc{1}{c}{\scriptsize{(3.235)}} & \mc{1}{c}{\scriptsize{(4.716)}} & \mc{1}{c}{\scriptsize{(6.343)}} & \mc{1}{c}{\scriptsize{(3.814)}} & \mc{1}{c}{\scriptsize{(7.569)}} & \mc{1}{c}{\scriptsize{(3.725)}} & \mc{1}{c}{\scriptsize{(2.755)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.686)}} & \mc{1}{c}{\scriptsize{(0.329)}} & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{(0.646)}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.770)}} & \mc{1}{c}{\scriptsize{(0.379)}} & \mc{1}{c}{\scriptsize{(0.280)}} \\  
 
     \mc{1}{l}{\scriptsize{Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.050}} & \mc{1}{c}{\scriptsize{0.061}} & \mc{1}{c}{\scriptsize{-0.256}} & \mc{1}{c}{\scriptsize{-0.084}} & \mc{1}{c}{\scriptsize{-0.199}} & \mc{1}{c}{\scriptsize{-0.013}} & \mc{1}{c}{\scriptsize{0.102}} & \mc{1}{c}{\scriptsize{0.109}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.735)}} & \mc{1}{c}{\scriptsize{(7.461)}} & \mc{1}{c}{\scriptsize{(1.098)}} & \mc{1}{c}{\scriptsize{(6.922)}} & \mc{1}{c}{\scriptsize{(0.941)}} & \mc{1}{c}{\scriptsize{(7.569)}} & \mc{1}{c}{\scriptsize{(6.431)}} & \mc{1}{c}{\scriptsize{(6.176)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.686)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.705)}} & \mc{1}{c}{\scriptsize{\textbf{(0.096)}}} & \mc{1}{c}{\scriptsize{(0.770)}} & \mc{1}{c}{\scriptsize{(0.655)}} & \mc{1}{c}{\scriptsize{(0.629)}} \\  
 
     \mc{1}{l}{\scriptsize{Severe Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.126}} & \mc{1}{c}{\scriptsize{-0.045}} & \mc{1}{c}{\scriptsize{-0.093}} & \mc{1}{c}{\scriptsize{0.013}} & \mc{1}{c}{\scriptsize{0.020}} & \mc{1}{c}{\scriptsize{-0.147}} & \mc{1}{c}{\scriptsize{-0.065}} & \mc{1}{c}{\scriptsize{-0.040}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.373)}} & \mc{1}{c}{\scriptsize{(7.461)}} & \mc{1}{c}{\scriptsize{(3.657)}} & \mc{1}{c}{\scriptsize{(7.137)}} & \mc{1}{c}{\scriptsize{(4.431)}} & \mc{1}{c}{\scriptsize{(3.000)}} & \mc{1}{c}{\scriptsize{(6.480)}} & \mc{1}{c}{\scriptsize{(6.176)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.343)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.372)}} & \mc{1}{c}{\scriptsize{(0.727)}} & \mc{1}{c}{\scriptsize{(0.451)}} & \mc{1}{c}{\scriptsize{(0.305)}} & \mc{1}{c}{\scriptsize{(0.660)}} & \mc{1}{c}{\scriptsize{(0.629)}} \\  
 
     \mc{1}{l}{\scriptsize{Waist-hip Ratio}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.006}} & \mc{1}{c}{\scriptsize{0.000}} & \mc{1}{c}{\scriptsize{-0.037}} & \mc{1}{c}{\scriptsize{-0.035}} & \mc{1}{c}{\scriptsize{-0.072}} & \mc{1}{c}{\scriptsize{0.003}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{0.014}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.735)}} & \mc{1}{c}{\scriptsize{(7.461)}} & \mc{1}{c}{\scriptsize{(3.657)}} & \mc{1}{c}{\scriptsize{(6.922)}} & \mc{1}{c}{\scriptsize{(3.451)}} & \mc{1}{c}{\scriptsize{(7.569)}} & \mc{1}{c}{\scriptsize{(6.480)}} & \mc{1}{c}{\scriptsize{(6.176)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.686)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.372)}} & \mc{1}{c}{\scriptsize{(0.705)}} & \mc{1}{c}{\scriptsize{(0.351)}} & \mc{1}{c}{\scriptsize{(0.770)}} & \mc{1}{c}{\scriptsize{(0.660)}} & \mc{1}{c}{\scriptsize{(0.629)}} \\  
 
     \mc{1}{l}{\scriptsize{Abdominal Obesity}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.091}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{-0.230}} & \mc{1}{c}{\scriptsize{-0.091}} & \mc{1}{c}{\scriptsize{-0.284}} & \mc{1}{c}{\scriptsize{-0.041}} & \mc{1}{c}{\scriptsize{0.016}} & \mc{1}{c}{\scriptsize{0.022}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.412)}} & \mc{1}{c}{\scriptsize{(7.461)}} & \mc{1}{c}{\scriptsize{(1.657)}} & \mc{1}{c}{\scriptsize{(6.922)}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(7.569)}} & \mc{1}{c}{\scriptsize{(6.480)}} & \mc{1}{c}{\scriptsize{(6.176)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.551)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.169)}} & \mc{1}{c}{\scriptsize{(0.705)}} & \mc{1}{c}{\scriptsize{\textbf{(0.038)}}} & \mc{1}{c}{\scriptsize{(0.770)}} & \mc{1}{c}{\scriptsize{(0.660)}} & \mc{1}{c}{\scriptsize{(0.629)}} \\  
 
     \mc{1}{l}{\scriptsize{Framingham Risk Score}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.348}} & \mc{1}{c}{\scriptsize{-0.403}} & \mc{1}{c}{\scriptsize{0.948}} & \mc{1}{c}{\scriptsize{0.181}} & \mc{1}{c}{\scriptsize{-0.526}} & \mc{1}{c}{\scriptsize{0.351}} & \mc{1}{c}{\scriptsize{-0.481}} & \mc{1}{c}{\scriptsize{-0.221}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.735)}} & \mc{1}{c}{\scriptsize{(7.461)}} & \mc{1}{c}{\scriptsize{(2.824)}} & \mc{1}{c}{\scriptsize{(7.137)}} & \mc{1}{c}{\scriptsize{(3.167)}} & \mc{1}{c}{\scriptsize{(7.569)}} & \mc{1}{c}{\scriptsize{(6.480)}} & \mc{1}{c}{\scriptsize{(6.176)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.686)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.287)}} & \mc{1}{c}{\scriptsize{(0.727)}} & \mc{1}{c}{\scriptsize{(0.322)}} & \mc{1}{c}{\scriptsize{(0.770)}} & \mc{1}{c}{\scriptsize{(0.660)}} & \mc{1}{c}{\scriptsize{(0.629)}} \\  
 
     \mc{1}{l}{\scriptsize{Obesity Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.068}} & \mc{1}{c}{\scriptsize{-0.114}} & \mc{1}{c}{\scriptsize{0.360}} & \mc{1}{c}{\scriptsize{0.088}} & \mc{1}{c}{\scriptsize{0.364}} & \mc{1}{c}{\scriptsize{0.002}} & \mc{1}{c}{\scriptsize{-0.223}} & \mc{1}{c}{\scriptsize{-0.256}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.735)}} & \mc{1}{c}{\scriptsize{(7.461)}} & \mc{1}{c}{\scriptsize{(3.657)}} & \mc{1}{c}{\scriptsize{(7.137)}} & \mc{1}{c}{\scriptsize{(3.814)}} & \mc{1}{c}{\scriptsize{(7.569)}} & \mc{1}{c}{\scriptsize{(6.480)}} & \mc{1}{c}{\scriptsize{(6.176)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.686)}} & \mc{1}{c}{\scriptsize{(0.759)}} & \mc{1}{c}{\scriptsize{(0.372)}} & \mc{1}{c}{\scriptsize{(0.727)}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{(0.770)}} & \mc{1}{c}{\scriptsize{(0.660)}} & \mc{1}{c}{\scriptsize{(0.629)}} \\  
 
   \bottomrule
   \end{tabular}
