--- a/AppResOutput/abccare_appendix/current/rslt_female_cat15_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat15_sd.tex
@@ -6,47 +6,47 @@
 
     \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.709}} & \mc{1}{c}{\scriptsize{-3.314}} & \mc{1}{c}{\scriptsize{-4.304}} & \mc{1}{c}{\scriptsize{-5.923}} & \mc{1}{c}{\scriptsize{-4.852}} & \mc{1}{c}{\scriptsize{-2.258}} & \mc{1}{c}{\scriptsize{-2.669}} & \mc{1}{c}{\scriptsize{-2.170}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.833)}} & \mc{1}{c}{\scriptsize{(1.833)}} & \mc{1}{c}{\scriptsize{(2.804)}} & \mc{1}{c}{\scriptsize{(0.980)}} & \mc{1}{c}{\scriptsize{(3.490)}} & \mc{1}{c}{\scriptsize{(2.922)}} & \mc{1}{c}{\scriptsize{(3.431)}} & \mc{1}{c}{\scriptsize{(4.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.187)}} & \mc{1}{c}{\scriptsize{(0.187)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.057}} & \mc{1}{c}{\scriptsize{-0.609}} & \mc{1}{c}{\scriptsize{-2.144}} & \mc{1}{c}{\scriptsize{-3.744}} & \mc{1}{c}{\scriptsize{0.571}} & \mc{1}{c}{\scriptsize{-0.950}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{1.724}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.333)}} & \mc{1}{c}{\scriptsize{(4.775)}} & \mc{1}{c}{\scriptsize{(4.137)}} & \mc{1}{c}{\scriptsize{(3.196)}} & \mc{1}{c}{\scriptsize{(5.608)}} & \mc{1}{c}{\scriptsize{(4.471)}} & \mc{1}{c}{\scriptsize{(5.206)}} & \mc{1}{c}{\scriptsize{(4.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.455)}} & \mc{1}{c}{\scriptsize{(0.530)}} & \mc{1}{c}{\scriptsize{(0.430)}} \\  
 
     \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-4.213}} & \mc{1}{c}{\scriptsize{-3.329}} & \mc{1}{c}{\scriptsize{-4.297}} & \mc{1}{c}{\scriptsize{-4.299}} & \mc{1}{c}{\scriptsize{-9.416}} & \mc{1}{c}{\scriptsize{-4.058}} & \mc{1}{c}{\scriptsize{-3.216}} & \mc{1}{c}{\scriptsize{-4.096}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(1.951)}} & \mc{1}{c}{\scriptsize{(3.010)}} & \mc{1}{c}{\scriptsize{(3.196)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.804)}} & \mc{1}{c}{\scriptsize{(2.775)}} & \mc{1}{c}{\scriptsize{(2.922)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.037)}}} & \mc{1}{c}{\scriptsize{(0.199)}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{\textbf{(0.050)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.082)}}} & \mc{1}{c}{\scriptsize{(0.282)}} & \mc{1}{c}{\scriptsize{(0.297)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.904}} & \mc{1}{c}{\scriptsize{-2.256}} & \mc{1}{c}{\scriptsize{1.064}} & \mc{1}{c}{\scriptsize{-0.701}} & \mc{1}{c}{\scriptsize{-0.058}} & \mc{1}{c}{\scriptsize{-2.974}} & \mc{1}{c}{\scriptsize{-3.181}} & \mc{1}{c}{\scriptsize{-3.034}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.461)}} & \mc{1}{c}{\scriptsize{(3.029)}} & \mc{1}{c}{\scriptsize{(4.137)}} & \mc{1}{c}{\scriptsize{(4.549)}} & \mc{1}{c}{\scriptsize{(5.608)}} & \mc{1}{c}{\scriptsize{(2.922)}} & \mc{1}{c}{\scriptsize{(3.431)}} & \mc{1}{c}{\scriptsize{(3.686)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.375)}} \\  
 
     \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.749}} & \mc{1}{c}{\scriptsize{-2.745}} & \mc{1}{c}{\scriptsize{-2.996}} & \mc{1}{c}{\scriptsize{-4.679}} & \mc{1}{c}{\scriptsize{-8.949}} & \mc{1}{c}{\scriptsize{-2.638}} & \mc{1}{c}{\scriptsize{-2.485}} & \mc{1}{c}{\scriptsize{-4.376}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.039)}} & \mc{1}{c}{\scriptsize{(3.029)}} & \mc{1}{c}{\scriptsize{(4.000)}} & \mc{1}{c}{\scriptsize{(2.980)}} & \mc{1}{c}{\scriptsize{(0.902)}} & \mc{1}{c}{\scriptsize{(2.922)}} & \mc{1}{c}{\scriptsize{(3.716)}} & \mc{1}{c}{\scriptsize{(2.922)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.208)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.407)}} & \mc{1}{c}{\scriptsize{(0.303)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.297)}} & \mc{1}{c}{\scriptsize{(0.378)}} & \mc{1}{c}{\scriptsize{(0.297)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-3.399}} & \mc{1}{c}{\scriptsize{-4.109}} & \mc{1}{c}{\scriptsize{-1.502}} & \mc{1}{c}{\scriptsize{-4.550}} & \mc{1}{c}{\scriptsize{-3.765}} & \mc{1}{c}{\scriptsize{-4.155}} & \mc{1}{c}{\scriptsize{-4.213}} & \mc{1}{c}{\scriptsize{-5.625}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.039)}} & \mc{1}{c}{\scriptsize{(1.480)}} & \mc{1}{c}{\scriptsize{(4.137)}} & \mc{1}{c}{\scriptsize{(3.196)}} & \mc{1}{c}{\scriptsize{(3.941)}} & \mc{1}{c}{\scriptsize{(2.294)}} & \mc{1}{c}{\scriptsize{(1.882)}} & \mc{1}{c}{\scriptsize{(2.049)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.208)}} & \mc{1}{c}{\scriptsize{(0.151)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.401)}} & \mc{1}{c}{\scriptsize{(0.234)}} & \mc{1}{c}{\scriptsize{(0.192)}} & \mc{1}{c}{\scriptsize{(0.209)}} \\  
 
     \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-3.256}} & \mc{1}{c}{\scriptsize{-2.213}} & \mc{1}{c}{\scriptsize{-4.552}} & \mc{1}{c}{\scriptsize{-4.455}} & \mc{1}{c}{\scriptsize{-10.540}} & \mc{1}{c}{\scriptsize{-2.894}} & \mc{1}{c}{\scriptsize{-1.905}} & \mc{1}{c}{\scriptsize{-2.927}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.971)}} & \mc{1}{c}{\scriptsize{(3.029)}} & \mc{1}{c}{\scriptsize{(3.010)}} & \mc{1}{c}{\scriptsize{(3.196)}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{(1.804)}} & \mc{1}{c}{\scriptsize{(3.716)}} & \mc{1}{c}{\scriptsize{(2.931)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.099)}}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.306)}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.378)}} & \mc{1}{c}{\scriptsize{(0.298)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.091}} & \mc{1}{c}{\scriptsize{-0.694}} & \mc{1}{c}{\scriptsize{-2.076}} & \mc{1}{c}{\scriptsize{-1.664}} & \mc{1}{c}{\scriptsize{-0.702}} & \mc{1}{c}{\scriptsize{-1.082}} &  & \mc{1}{c}{\scriptsize{1.563}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.333)}} & \mc{1}{c}{\scriptsize{(4.775)}} & \mc{1}{c}{\scriptsize{(4.137)}} & \mc{1}{c}{\scriptsize{(4.549)}} & \mc{1}{c}{\scriptsize{(5.608)}} & \mc{1}{c}{\scriptsize{(4.471)}} &  & \mc{1}{c}{\scriptsize{(4.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.486)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.463)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.455)}} &  & \mc{1}{c}{\scriptsize{(0.430)}} \\  
 
     \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-3.146}} & \mc{1}{c}{\scriptsize{-2.581}} & \mc{1}{c}{\scriptsize{-4.917}} & \mc{1}{c}{\scriptsize{-4.896}} & \mc{1}{c}{\scriptsize{-10.996}} & \mc{1}{c}{\scriptsize{-2.564}} & \mc{1}{c}{\scriptsize{-1.827}} & \mc{1}{c}{\scriptsize{-4.987}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.520)}} & \mc{1}{c}{\scriptsize{(3.029)}} & \mc{1}{c}{\scriptsize{(1.637)}} & \mc{1}{c}{\scriptsize{(1.539)}} & \mc{1}{c}{\scriptsize{\textbf{(0.069)}}} & \mc{1}{c}{\scriptsize{(2.814)}} & \mc{1}{c}{\scriptsize{(3.804)}} & \mc{1}{c}{\scriptsize{(1.657)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.155)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.167)}} & \mc{1}{c}{\scriptsize{(0.157)}} & \mc{1}{c}{\scriptsize{\textbf{(0.007)}}} & \mc{1}{c}{\scriptsize{(0.286)}} & \mc{1}{c}{\scriptsize{(0.387)}} & \mc{1}{c}{\scriptsize{(0.169)}} \\  
 
     \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.516}} & \mc{1}{c}{\scriptsize{-2.306}} & \mc{1}{c}{\scriptsize{-0.151}} & \mc{1}{c}{\scriptsize{-2.444}} & \mc{1}{c}{\scriptsize{0.330}} & \mc{1}{c}{\scriptsize{-3.477}} & \mc{1}{c}{\scriptsize{-2.589}} & \mc{1}{c}{\scriptsize{-3.108}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.755)}} & \mc{1}{c}{\scriptsize{(1.725)}} & \mc{1}{c}{\scriptsize{(4.539)}} & \mc{1}{c}{\scriptsize{(2.882)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{(1.186)}} & \mc{1}{c}{\scriptsize{(1.657)}} & \mc{1}{c}{\scriptsize{(1.882)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.179)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.121)}} & \mc{1}{c}{\scriptsize{(0.169)}} & \mc{1}{c}{\scriptsize{(0.192)}} \\  
 
     \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.507}} & \mc{1}{c}{\scriptsize{-0.390}} & \mc{1}{c}{\scriptsize{-0.527}} & \mc{1}{c}{\scriptsize{-0.615}} & \mc{1}{c}{\scriptsize{-0.678}} & \mc{1}{c}{\scriptsize{-0.500}} & \mc{1}{c}{\scriptsize{-0.355}} & \mc{1}{c}{\scriptsize{-0.552}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.863)}} & \mc{1}{c}{\scriptsize{(1.431)}} & \mc{1}{c}{\scriptsize{(1.157)}} & \mc{1}{c}{\scriptsize{(1.725)}} & \mc{1}{c}{\scriptsize{(0.578)}} & \mc{1}{c}{\scriptsize{(1.471)}} & \mc{1}{c}{\scriptsize{(0.804)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.088)}}} & \mc{1}{c}{\scriptsize{(0.146)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{(0.150)}} & \mc{1}{c}{\scriptsize{\textbf{(0.082)}}} \\  
 
   \bottomrule
   \end{tabular}
