--- a/AppResOutput/abccare_appendix/current/rslt_female_cat5_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat5_sd.tex
@@ -6,27 +6,27 @@
 
     \mc{1}{l}{\scriptsize{Mother Works}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{0.114}} & \mc{1}{c}{\scriptsize{0.090}} & \mc{1}{c}{\scriptsize{0.296}} & \mc{1}{c}{\scriptsize{0.286}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.048}} & \mc{1}{c}{\scriptsize{0.038}} & \mc{1}{c}{\scriptsize{0.096}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.990)}} & \mc{1}{c}{\scriptsize{(2.686)}} & \mc{1}{c}{\scriptsize{(0.255)}} & \mc{1}{c}{\scriptsize{(0.382)}} & \mc{1}{c}{\scriptsize{(0.618)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(4.922)}} & \mc{1}{c}{\scriptsize{(4.363)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.101)}} & \mc{1}{c}{\scriptsize{(0.273)}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.063)}}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.444)}} \\  
 
      & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{0.119}} & \mc{1}{c}{\scriptsize{0.090}} & \mc{1}{c}{\scriptsize{0.219}} & \mc{1}{c}{\scriptsize{0.191}} & \mc{1}{c}{\scriptsize{0.179}} & \mc{1}{c}{\scriptsize{0.092}} & \mc{1}{c}{\scriptsize{0.056}} & \mc{1}{c}{\scriptsize{0.057}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.990)}} & \mc{1}{c}{\scriptsize{(3.029)}} & \mc{1}{c}{\scriptsize{(0.814)}} & \mc{1}{c}{\scriptsize{(1.294)}} & \mc{1}{c}{\scriptsize{(1.588)}} & \mc{1}{c}{\scriptsize{(3.147)}} & \mc{1}{c}{\scriptsize{(4.784)}} & \mc{1}{c}{\scriptsize{(5.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.101)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{(0.132)}} & \mc{1}{c}{\scriptsize{(0.162)}} & \mc{1}{c}{\scriptsize{(0.320)}} & \mc{1}{c}{\scriptsize{(0.487)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
      & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{0.127}} & \mc{1}{c}{\scriptsize{0.123}} & \mc{1}{c}{\scriptsize{0.306}} & \mc{1}{c}{\scriptsize{0.312}} & \mc{1}{c}{\scriptsize{0.329}} & \mc{1}{c}{\scriptsize{0.076}} & \mc{1}{c}{\scriptsize{0.073}} & \mc{1}{c}{\scriptsize{0.054}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.735)}} & \mc{1}{c}{\scriptsize{(1.216)}} & \mc{1}{c}{\scriptsize{(0.245)}} & \mc{1}{c}{\scriptsize{(0.304)}} & \mc{1}{c}{\scriptsize{(0.637)}} & \mc{1}{c}{\scriptsize{(3.392)}} & \mc{1}{c}{\scriptsize{(4.333)}} & \mc{1}{c}{\scriptsize{(5.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.075)}}} & \mc{1}{c}{\scriptsize{(0.124)}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.031)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.065)}}} & \mc{1}{c}{\scriptsize{(0.345)}} & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
      & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{0.089}} & \mc{1}{c}{\scriptsize{0.064}} & \mc{1}{c}{\scriptsize{0.342}} & \mc{1}{c}{\scriptsize{0.309}} & \mc{1}{c}{\scriptsize{0.424}} & \mc{1}{c}{\scriptsize{0.005}} & \mc{1}{c}{\scriptsize{-0.017}} & \mc{1}{c}{\scriptsize{-0.024}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.853)}} & \mc{1}{c}{\scriptsize{(3.225)}} & \mc{1}{c}{\scriptsize{(0.255)}} & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{(0.382)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(5.490)}} & \mc{1}{c}{\scriptsize{(5.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(0.328)}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
      & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-0.040}} & \mc{1}{c}{\scriptsize{-0.066}} & \mc{1}{c}{\scriptsize{0.180}} & \mc{1}{c}{\scriptsize{0.173}} & \mc{1}{c}{\scriptsize{0.512}} & \mc{1}{c}{\scriptsize{-0.075}} & \mc{1}{c}{\scriptsize{-0.092}} & \mc{1}{c}{\scriptsize{-0.089}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.216)}} & \mc{1}{c}{\scriptsize{(3.225)}} & \mc{1}{c}{\scriptsize{(1.627)}} & \mc{1}{c}{\scriptsize{(2.363)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(4.784)}} & \mc{1}{c}{\scriptsize{(5.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.327)}} & \mc{1}{c}{\scriptsize{(0.328)}} & \mc{1}{c}{\scriptsize{(0.166)}} & \mc{1}{c}{\scriptsize{(0.241)}} & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.487)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
     \mc{1}{l}{\scriptsize{Mother Works Factor}} & \mc{1}{c}{\scriptsize{2 to 21}} & \mc{1}{c}{\scriptsize{-0.275}} & \mc{1}{c}{\scriptsize{-0.227}} & \mc{1}{c}{\scriptsize{-0.793}} & \mc{1}{c}{\scriptsize{-0.799}} & \mc{1}{c}{\scriptsize{-0.734}} & \mc{1}{c}{\scriptsize{-0.129}} & \mc{1}{c}{\scriptsize{-0.053}} & \mc{1}{c}{\scriptsize{-0.092}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.853)}} & \mc{1}{c}{\scriptsize{(3.118)}} & \mc{1}{c}{\scriptsize{(0.814)}} & \mc{1}{c}{\scriptsize{(0.912)}} & \mc{1}{c}{\scriptsize{(1.167)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(5.490)}} & \mc{1}{c}{\scriptsize{(5.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.189)}} & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{\textbf{(0.083)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.093)}}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.559)}} & \mc{1}{c}{\scriptsize{(0.532)}} \\  
 
   \bottomrule
   \end{tabular}
