--- a/AppResOutput/abccare_appendix/current/rslt_female_cat7_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat7_sd.tex
@@ -6,27 +6,27 @@
 
     \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.125}} & \mc{1}{c}{\scriptsize{0.133}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{0.180}} & \mc{1}{c}{\scriptsize{0.340}} & \mc{1}{c}{\scriptsize{0.111}} & \mc{1}{c}{\scriptsize{0.128}} & \mc{1}{c}{\scriptsize{0.070}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.490)}} & \mc{1}{c}{\scriptsize{(1.814)}} & \mc{1}{c}{\scriptsize{(2.882)}} & \mc{1}{c}{\scriptsize{(3.069)}} & \mc{1}{c}{\scriptsize{(1.098)}} & \mc{1}{c}{\scriptsize{(2.912)}} & \mc{1}{c}{\scriptsize{(2.647)}} & \mc{1}{c}{\scriptsize{(5.441)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.152)}} & \mc{1}{c}{\scriptsize{(0.185)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.312)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.269)}} & \mc{1}{c}{\scriptsize{(0.554)}} \\  
 
     \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{167}} & \mc{1}{c}{\scriptsize{-1,227}} & \mc{1}{c}{\scriptsize{1,577}} & \mc{1}{c}{\scriptsize{136}} & \mc{1}{c}{\scriptsize{8,263}} & \mc{1}{c}{\scriptsize{-429}} & \mc{1}{c}{\scriptsize{-1,802}} & \mc{1}{c}{\scriptsize{447}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.588)}} & \mc{1}{c}{\scriptsize{(3.569)}} & \mc{1}{c}{\scriptsize{(5.373)}} & \mc{1}{c}{\scriptsize{(4.598)}} & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(4.235)}} & \mc{1}{c}{\scriptsize{(5.304)}} & \mc{1}{c}{\scriptsize{(6.186)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.467)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.547)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.630)}} \\  
 
      & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{12,377}} & \mc{1}{c}{\scriptsize{9,616}} & \mc{1}{c}{\scriptsize{17,677}} & \mc{1}{c}{\scriptsize{18,497}} & \mc{1}{c}{\scriptsize{14,862}} & \mc{1}{c}{\scriptsize{10,847}} & \mc{1}{c}{\scriptsize{7,159}} & \mc{1}{c}{\scriptsize{-822}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.824)}} & \mc{1}{c}{\scriptsize{(3.569)}} & \mc{1}{c}{\scriptsize{(1.373)}} & \mc{1}{c}{\scriptsize{(4.598)}} & \mc{1}{c}{\scriptsize{(0.578)}} & \mc{1}{c}{\scriptsize{(2.912)}} & \mc{1}{c}{\scriptsize{(5.304)}} & \mc{1}{c}{\scriptsize{(6.186)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.140)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.630)}} \\  
 
     \mc{1}{l}{\scriptsize{Public-Transfer Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-728}} & \mc{1}{c}{\scriptsize{-1,124}} & \mc{1}{c}{\scriptsize{-247}} & \mc{1}{c}{\scriptsize{-1,208}} & \mc{1}{c}{\scriptsize{-2,875}} & \mc{1}{c}{\scriptsize{-1,054}} & \mc{1}{c}{\scriptsize{-897}} & \mc{1}{c}{\scriptsize{-1,480}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.412)}} & \mc{1}{c}{\scriptsize{(3.569)}} & \mc{1}{c}{\scriptsize{(5.373)}} & \mc{1}{c}{\scriptsize{(4.598)}} & \mc{1}{c}{\scriptsize{(1.098)}} & \mc{1}{c}{\scriptsize{(2.912)}} & \mc{1}{c}{\scriptsize{(5.304)}} & \mc{1}{c}{\scriptsize{(3.588)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.347)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.547)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.365)}} \\  
 
      & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-1,832}} & \mc{1}{c}{\scriptsize{-1,117}} & \mc{1}{c}{\scriptsize{-1,613}} & \mc{1}{c}{\scriptsize{-1,542}} & \mc{1}{c}{\scriptsize{-3,221}} & \mc{1}{c}{\scriptsize{-1,483}} & \mc{1}{c}{\scriptsize{-915}} & \mc{1}{c}{\scriptsize{-2,626}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.794)}} & \mc{1}{c}{\scriptsize{(3.569)}} & \mc{1}{c}{\scriptsize{(2.882)}} & \mc{1}{c}{\scriptsize{(3.412)}} & \mc{1}{c}{\scriptsize{(1.098)}} & \mc{1}{c}{\scriptsize{(2.912)}} & \mc{1}{c}{\scriptsize{(5.304)}} & \mc{1}{c}{\scriptsize{(3.745)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.081)}}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.347)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.540)}} & \mc{1}{c}{\scriptsize{(0.381)}} \\  
 
     \mc{1}{l}{\scriptsize{Employment Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.513}} & \mc{1}{c}{\scriptsize{0.350}} & \mc{1}{c}{\scriptsize{0.568}} & \mc{1}{c}{\scriptsize{0.485}} & \mc{1}{c}{\scriptsize{0.998}} & \mc{1}{c}{\scriptsize{0.464}} & \mc{1}{c}{\scriptsize{0.316}} & \mc{1}{c}{\scriptsize{0.244}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.412)}} & \mc{1}{c}{\scriptsize{(3.569)}} & \mc{1}{c}{\scriptsize{(3.039)}} & \mc{1}{c}{\scriptsize{(4.598)}} & \mc{1}{c}{\scriptsize{(1.098)}} & \mc{1}{c}{\scriptsize{(2.912)}} & \mc{1}{c}{\scriptsize{(5.284)}} & \mc{1}{c}{\scriptsize{(5.441)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.246)}} & \mc{1}{c}{\scriptsize{(0.363)}} & \mc{1}{c}{\scriptsize{(0.309)}} & \mc{1}{c}{\scriptsize{(0.468)}} & \mc{1}{c}{\scriptsize{(0.112)}} & \mc{1}{c}{\scriptsize{(0.296)}} & \mc{1}{c}{\scriptsize{(0.538)}} & \mc{1}{c}{\scriptsize{(0.554)}} \\  
 
   \bottomrule
   \end{tabular}
