--- a/AppResOutput/abccare_appendix/current/rslt_female_cat8_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_female_cat8_sd.tex
@@ -6,19 +6,19 @@
 
     \mc{1}{l}{\scriptsize{Total Felony Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.045}} & \mc{1}{c}{\scriptsize{0.229}} & \mc{1}{c}{\scriptsize{-0.132}} & \mc{1}{c}{\scriptsize{0.264}} & \mc{1}{c}{\scriptsize{-0.965}} & \mc{1}{c}{\scriptsize{0.112}} & \mc{1}{c}{\scriptsize{0.226}} & \mc{1}{c}{\scriptsize{0.005}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.402)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{(4.696)}} & \mc{1}{c}{\scriptsize{(4.794)}} & \mc{1}{c}{\scriptsize{(1.745)}} & \mc{1}{c}{\scriptsize{(4.922)}} & \mc{1}{c}{\scriptsize{(5.382)}} & \mc{1}{c}{\scriptsize{(4.794)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.478)}} & \mc{1}{c}{\scriptsize{(0.488)}} & \mc{1}{c}{\scriptsize{(0.178)}} & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.548)}} & \mc{1}{c}{\scriptsize{(0.488)}} \\  
 
     \mc{1}{l}{\scriptsize{Total Misdemeanor Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.689}} & \mc{1}{c}{\scriptsize{-0.396}} & \mc{1}{c}{\scriptsize{-1.445}} & \mc{1}{c}{\scriptsize{-1.159}} & \mc{1}{c}{\scriptsize{-2.448}} & \mc{1}{c}{\scriptsize{-0.546}} & \mc{1}{c}{\scriptsize{-0.215}} & \mc{1}{c}{\scriptsize{-0.201}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.225)}} & \mc{1}{c}{\scriptsize{(3.755)}} & \mc{1}{c}{\scriptsize{(1.725)}} & \mc{1}{c}{\scriptsize{(2.500)}} & \mc{1}{c}{\scriptsize{(1.882)}} & \mc{1}{c}{\scriptsize{(2.216)}} & \mc{1}{c}{\scriptsize{(5.382)}} & \mc{1}{c}{\scriptsize{(3.824)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.125)}} & \mc{1}{c}{\scriptsize{(0.382)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{(0.192)}} & \mc{1}{c}{\scriptsize{(0.226)}} & \mc{1}{c}{\scriptsize{(0.548)}} & \mc{1}{c}{\scriptsize{(0.389)}} \\  
 
     \mc{1}{l}{\scriptsize{Total Years Incarcerated}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.167}} & \mc{1}{c}{\scriptsize{0.205}} & \mc{1}{c}{\scriptsize{0.284}} & \mc{1}{c}{\scriptsize{0.266}} &  & \mc{1}{c}{\scriptsize{0.157}} & \mc{1}{c}{\scriptsize{0.225}} & \mc{1}{c}{\scriptsize{-0.038}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.667)}} & \mc{1}{c}{\scriptsize{(3.304)}} & \mc{1}{c}{\scriptsize{(0.235)}} & \mc{1}{c}{\scriptsize{(1.510)}} &  & \mc{1}{c}{\scriptsize{(2.647)}} & \mc{1}{c}{\scriptsize{(3.500)}} & \mc{1}{c}{\scriptsize{(2.196)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.170)}} & \mc{1}{c}{\scriptsize{(0.336)}} & \mc{1}{c}{\scriptsize{\textbf{(0.024)}}} & \mc{1}{c}{\scriptsize{(0.154)}} &  & \mc{1}{c}{\scriptsize{(0.269)}} & \mc{1}{c}{\scriptsize{(0.356)}} & \mc{1}{c}{\scriptsize{(0.224)}} \\  
 
     \mc{1}{l}{\scriptsize{Crime Factor}} & \mc{1}{c}{\scriptsize{30 to Mid-30s}} & \mc{1}{c}{\scriptsize{0.035}} & \mc{1}{c}{\scriptsize{0.102}} & \mc{1}{c}{\scriptsize{-0.048}} & \mc{1}{c}{\scriptsize{0.006}} & \mc{1}{c}{\scriptsize{-0.725}} & \mc{1}{c}{\scriptsize{0.068}} & \mc{1}{c}{\scriptsize{0.175}} & \mc{1}{c}{\scriptsize{-0.070}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.402)}} & \mc{1}{c}{\scriptsize{(4.422)}} & \mc{1}{c}{\scriptsize{(4.696)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(1.882)}} & \mc{1}{c}{\scriptsize{(4.922)}} & \mc{1}{c}{\scriptsize{(5.382)}} & \mc{1}{c}{\scriptsize{(3.618)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.450)}} & \mc{1}{c}{\scriptsize{(0.478)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.192)}} & \mc{1}{c}{\scriptsize{(0.501)}} & \mc{1}{c}{\scriptsize{(0.548)}} & \mc{1}{c}{\scriptsize{(0.368)}} \\  
 
   \bottomrule
   \end{tabular}
