--- a/AppResOutput/abccare_appendix/current/rslt_male_cat11_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat11_sd.tex
@@ -6,23 +6,23 @@
 
     \mc{1}{l}{\scriptsize{Systolic Blood Pressure (mm Hg)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.899}} & \mc{1}{c}{\scriptsize{-4.316}} & \mc{1}{c}{\scriptsize{1.065}} & \mc{1}{c}{\scriptsize{-2.825}} & \mc{1}{c}{\scriptsize{14.979}} & \mc{1}{c}{\scriptsize{-3.980}} & \mc{1}{c}{\scriptsize{-3.915}} & \mc{1}{c}{\scriptsize{-18.537}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.118)}} & \mc{1}{c}{\scriptsize{(4.029)}} & \mc{1}{c}{\scriptsize{(9.804)}} & \mc{1}{c}{\scriptsize{(5.431)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(3.500)}} & \mc{1}{c}{\scriptsize{(4.490)}} & \mc{1}{c}{\scriptsize{(0.284)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.419)}} & \mc{1}{c}{\scriptsize{(0.410)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.553)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(0.356)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} \\  
 
     \mc{1}{l}{\scriptsize{Diastolic Blood Pressure (mm Hg)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.002}} & \mc{1}{c}{\scriptsize{1.323}} & \mc{1}{c}{\scriptsize{4.725}} & \mc{1}{c}{\scriptsize{5.667}} & \mc{1}{c}{\scriptsize{-8.741}} & \mc{1}{c}{\scriptsize{-1.291}} & \mc{1}{c}{\scriptsize{0.834}} & \mc{1}{c}{\scriptsize{-13.988}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.765)}} & \mc{1}{c}{\scriptsize{(4.873)}} & \mc{1}{c}{\scriptsize{(9.804)}} & \mc{1}{c}{\scriptsize{(5.431)}} & \mc{1}{c}{\scriptsize{(0.775)}} & \mc{1}{c}{\scriptsize{(3.941)}} & \mc{1}{c}{\scriptsize{(5.176)}} & \mc{1}{c}{\scriptsize{(0.284)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.485)}} & \mc{1}{c}{\scriptsize{(0.496)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.553)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.401)}} & \mc{1}{c}{\scriptsize{(0.527)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} \\  
 
     \mc{1}{l}{\scriptsize{Prehypertension}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.189}} & \mc{1}{c}{\scriptsize{-0.179}} & \mc{1}{c}{\scriptsize{-0.094}} & \mc{1}{c}{\scriptsize{-0.100}} & \mc{1}{c}{\scriptsize{0.077}} & \mc{1}{c}{\scriptsize{-0.215}} & \mc{1}{c}{\scriptsize{-0.215}} & \mc{1}{c}{\scriptsize{-0.283}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.127)}} & \mc{1}{c}{\scriptsize{(1.284)}} & \mc{1}{c}{\scriptsize{(9.804)}} & \mc{1}{c}{\scriptsize{(5.431)}} & \mc{1}{c}{\scriptsize{(5.627)}} & \mc{1}{c}{\scriptsize{(0.529)}} & \mc{1}{c}{\scriptsize{(1.167)}} & \mc{1}{c}{\scriptsize{(0.186)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.115)}} & \mc{1}{c}{\scriptsize{(0.131)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.553)}} & \mc{1}{c}{\scriptsize{(0.573)}} & \mc{1}{c}{\scriptsize{\textbf{(0.054)}}} & \mc{1}{c}{\scriptsize{(0.119)}} & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} \\  
 
     \mc{1}{l}{\scriptsize{Hypertension}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.172}} & \mc{1}{c}{\scriptsize{0.151}} & \mc{1}{c}{\scriptsize{0.232}} & \mc{1}{c}{\scriptsize{0.112}} & \mc{1}{c}{\scriptsize{-0.075}} & \mc{1}{c}{\scriptsize{0.156}} & \mc{1}{c}{\scriptsize{0.177}} & \mc{1}{c}{\scriptsize{-0.435}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.029)}} & \mc{1}{c}{\scriptsize{(3.343)}} & \mc{1}{c}{\scriptsize{(9.804)}} & \mc{1}{c}{\scriptsize{(5.431)}} & \mc{1}{c}{\scriptsize{(5.627)}} & \mc{1}{c}{\scriptsize{(2.716)}} & \mc{1}{c}{\scriptsize{(3.167)}} & \mc{1}{c}{\scriptsize{(0.284)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.207)}} & \mc{1}{c}{\scriptsize{(0.340)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.553)}} & \mc{1}{c}{\scriptsize{(0.573)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.322)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} \\  
 
     \mc{1}{l}{\scriptsize{Hypertension Factor}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.061}} & \mc{1}{c}{\scriptsize{0.001}} & \mc{1}{c}{\scriptsize{0.195}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{-0.131}} & \mc{1}{c}{\scriptsize{-0.017}} & \mc{1}{c}{\scriptsize{-1.140}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.716)}} & \mc{1}{c}{\scriptsize{(4.931)}} & \mc{1}{c}{\scriptsize{(9.804)}} & \mc{1}{c}{\scriptsize{(5.431)}} & \mc{1}{c}{\scriptsize{(5.627)}} & \mc{1}{c}{\scriptsize{(3.941)}} & \mc{1}{c}{\scriptsize{(5.176)}} & \mc{1}{c}{\scriptsize{(0.284)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.480)}} & \mc{1}{c}{\scriptsize{(0.502)}} & \mc{1}{c}{\scriptsize{(0.998)}} & \mc{1}{c}{\scriptsize{(0.553)}} & \mc{1}{c}{\scriptsize{(0.573)}} & \mc{1}{c}{\scriptsize{(0.401)}} & \mc{1}{c}{\scriptsize{(0.527)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} \\  
 
   \bottomrule
   \end{tabular}
