--- a/AppResOutput/abccare_appendix/current/rslt_male_cat15_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat15_sd.tex
@@ -6,47 +6,47 @@
 
     \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.671}} & \mc{1}{c}{\scriptsize{-2.668}} & \mc{1}{c}{\scriptsize{-4.893}} & \mc{1}{c}{\scriptsize{-4.641}} & \mc{1}{c}{\scriptsize{-4.337}} & \mc{1}{c}{\scriptsize{-2.258}} & \mc{1}{c}{\scriptsize{-2.403}} & \mc{1}{c}{\scriptsize{-3.823}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.500)}} & \mc{1}{c}{\scriptsize{(4.490)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(4.137)}} & \mc{1}{c}{\scriptsize{(3.873)}} & \mc{1}{c}{\scriptsize{(3.588)}} & \mc{1}{c}{\scriptsize{(3.255)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.356)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.421)}} & \mc{1}{c}{\scriptsize{(0.394)}} & \mc{1}{c}{\scriptsize{(0.365)}} & \mc{1}{c}{\scriptsize{(0.331)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.724}} & \mc{1}{c}{\scriptsize{2.202}} & \mc{1}{c}{\scriptsize{-0.014}} &  & \mc{1}{c}{\scriptsize{-4.910}} & \mc{1}{c}{\scriptsize{0.925}} & \mc{1}{c}{\scriptsize{3.638}} & \mc{1}{c}{\scriptsize{-3.079}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.402)}} & \mc{1}{c}{\scriptsize{(4.490)}} & \mc{1}{c}{\scriptsize{(9.824)}} &  & \mc{1}{c}{\scriptsize{(4.843)}} & \mc{1}{c}{\scriptsize{(5.137)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(6.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.493)}} & \mc{1}{c}{\scriptsize{(0.523)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.624)}} \\  
 
     \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-5.649}} & \mc{1}{c}{\scriptsize{-6.052}} & \mc{1}{c}{\scriptsize{-9.358}} & \mc{1}{c}{\scriptsize{-11.051}} & \mc{1}{c}{\scriptsize{1.678}} & \mc{1}{c}{\scriptsize{-4.406}} & \mc{1}{c}{\scriptsize{-4.460}} & \mc{1}{c}{\scriptsize{-3.116}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.520)}} & \mc{1}{c}{\scriptsize{(1.196)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(6.461)}} & \mc{1}{c}{\scriptsize{(2.225)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(4.284)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.122)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.658)}} & \mc{1}{c}{\scriptsize{(0.227)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.436)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.466}} & \mc{1}{c}{\scriptsize{-2.366}} & \mc{1}{c}{\scriptsize{-0.109}} &  & \mc{1}{c}{\scriptsize{1.940}} & \mc{1}{c}{\scriptsize{-3.109}} & \mc{1}{c}{\scriptsize{-3.364}} & \mc{1}{c}{\scriptsize{-2.991}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.578)}} & \mc{1}{c}{\scriptsize{(4.490)}} & \mc{1}{c}{\scriptsize{(9.824)}} &  & \mc{1}{c}{\scriptsize{(6.088)}} & \mc{1}{c}{\scriptsize{(3.873)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(6.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.364)}} & \mc{1}{c}{\scriptsize{(0.457)}} & \mc{1}{c}{\scriptsize{(1.000)}} &  & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.394)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.624)}} \\  
 
     \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-6.163}} & \mc{1}{c}{\scriptsize{-5.939}} & \mc{1}{c}{\scriptsize{-9.552}} & \mc{1}{c}{\scriptsize{-9.018}} & \mc{1}{c}{\scriptsize{3.409}} & \mc{1}{c}{\scriptsize{-5.244}} & \mc{1}{c}{\scriptsize{-4.560}} & \mc{1}{c}{\scriptsize{-1.371}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.520)}} & \mc{1}{c}{\scriptsize{(1.206)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(1.451)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(6.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.123)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.148)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.624)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-4.564}} & \mc{1}{c}{\scriptsize{-4.137}} & \mc{1}{c}{\scriptsize{-3.457}} & \mc{1}{c}{\scriptsize{-7.905}} & \mc{1}{c}{\scriptsize{0.718}} & \mc{1}{c}{\scriptsize{-4.866}} & \mc{1}{c}{\scriptsize{-3.416}} & \mc{1}{c}{\scriptsize{-3.423}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.196)}} & \mc{1}{c}{\scriptsize{(2.039)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(1.912)}} & \mc{1}{c}{\scriptsize{(6.461)}} & \mc{1}{c}{\scriptsize{(2.549)}} & \mc{1}{c}{\scriptsize{(3.363)}} & \mc{1}{c}{\scriptsize{(6.049)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.224)}} & \mc{1}{c}{\scriptsize{(0.208)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.195)}} & \mc{1}{c}{\scriptsize{(0.658)}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.342)}} & \mc{1}{c}{\scriptsize{(0.616)}} \\  
 
     \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-4.721}} & \mc{1}{c}{\scriptsize{-5.735}} & \mc{1}{c}{\scriptsize{-10.732}} & \mc{1}{c}{\scriptsize{-10.913}} & \mc{1}{c}{\scriptsize{2.637}} & \mc{1}{c}{\scriptsize{-3.299}} & \mc{1}{c}{\scriptsize{-4.233}} & \mc{1}{c}{\scriptsize{-1.804}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.520)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(6.461)}} & \mc{1}{c}{\scriptsize{(2.549)}} & \mc{1}{c}{\scriptsize{(2.392)}} & \mc{1}{c}{\scriptsize{(6.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.050)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.658)}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.244)}} & \mc{1}{c}{\scriptsize{(0.624)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.512}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{-0.797}} & \mc{1}{c}{\scriptsize{-4.159}} & \mc{1}{c}{\scriptsize{-2.705}} & \mc{1}{c}{\scriptsize{0.870}} & \mc{1}{c}{\scriptsize{0.701}} & \mc{1}{c}{\scriptsize{-2.521}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.402)}} & \mc{1}{c}{\scriptsize{(4.569)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(4.108)}} & \mc{1}{c}{\scriptsize{(6.088)}} & \mc{1}{c}{\scriptsize{(5.137)}} & \mc{1}{c}{\scriptsize{(3.922)}} & \mc{1}{c}{\scriptsize{(6.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.550)}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.418)}} & \mc{1}{c}{\scriptsize{(0.620)}} & \mc{1}{c}{\scriptsize{(0.523)}} & \mc{1}{c}{\scriptsize{(0.399)}} & \mc{1}{c}{\scriptsize{(0.624)}} \\  
 
     \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-6.436}} & \mc{1}{c}{\scriptsize{-6.271}} & \mc{1}{c}{\scriptsize{-11.241}} & \mc{1}{c}{\scriptsize{-9.194}} & \mc{1}{c}{\scriptsize{1.702}} & \mc{1}{c}{\scriptsize{-5.472}} & \mc{1}{c}{\scriptsize{-4.928}} & \mc{1}{c}{\scriptsize{0.077}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.843)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(6.461)}} & \mc{1}{c}{\scriptsize{(0.922)}} & \mc{1}{c}{\scriptsize{(2.686)}} & \mc{1}{c}{\scriptsize{(6.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.086)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.658)}} & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.273)}} & \mc{1}{c}{\scriptsize{(0.624)}} \\  
 
     \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.365}} & \mc{1}{c}{\scriptsize{-1.290}} & \mc{1}{c}{\scriptsize{0.290}} & \mc{1}{c}{\scriptsize{-4.084}} & \mc{1}{c}{\scriptsize{-0.584}} & \mc{1}{c}{\scriptsize{-3.089}} & \mc{1}{c}{\scriptsize{-1.441}} & \mc{1}{c}{\scriptsize{-2.826}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.676)}} & \mc{1}{c}{\scriptsize{(3.284)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(2.804)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(3.118)}} & \mc{1}{c}{\scriptsize{(3.892)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.272)}} & \mc{1}{c}{\scriptsize{(0.334)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.317)}} & \mc{1}{c}{\scriptsize{(0.396)}} \\  
 
     \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.624}} & \mc{1}{c}{\scriptsize{-0.429}} & \mc{1}{c}{\scriptsize{-0.747}} & \mc{1}{c}{\scriptsize{-0.923}} & \mc{1}{c}{\scriptsize{0.005}} & \mc{1}{c}{\scriptsize{-0.589}} & \mc{1}{c}{\scriptsize{-0.302}} & \mc{1}{c}{\scriptsize{-0.142}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.382)}} & \mc{1}{c}{\scriptsize{(1.951)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(2.804)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(0.716)}} & \mc{1}{c}{\scriptsize{(3.078)}} & \mc{1}{c}{\scriptsize{(3.892)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.199)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{\textbf{(0.073)}}} & \mc{1}{c}{\scriptsize{(0.313)}} & \mc{1}{c}{\scriptsize{(0.396)}} \\  
 
   \bottomrule
   \end{tabular}
