--- a/AppResOutput/abccare_appendix/current/rslt_male_cat3_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_male_cat3_sd.tex
@@ -6,27 +6,27 @@
 
     \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{-0.012}} & \mc{1}{c}{\scriptsize{0.039}} & \mc{1}{c}{\scriptsize{-0.115}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{-0.225}} & \mc{1}{c}{\scriptsize{0.034}} & \mc{1}{c}{\scriptsize{0.071}} & \mc{1}{c}{\scriptsize{0.171}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.402)}} & \mc{1}{c}{\scriptsize{(4.578)}} & \mc{1}{c}{\scriptsize{(2.657)}} & \mc{1}{c}{\scriptsize{(4.618)}} & \mc{1}{c}{\scriptsize{(1.863)}} & \mc{1}{c}{\scriptsize{(4.265)}} & \mc{1}{c}{\scriptsize{(4.510)}} & \mc{1}{c}{\scriptsize{(1.951)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.448)}} & \mc{1}{c}{\scriptsize{(0.466)}} & \mc{1}{c}{\scriptsize{(0.270)}} & \mc{1}{c}{\scriptsize{(0.470)}} & \mc{1}{c}{\scriptsize{(0.190)}} & \mc{1}{c}{\scriptsize{(0.434)}} & \mc{1}{c}{\scriptsize{(0.459)}} & \mc{1}{c}{\scriptsize{(0.199)}} \\  
 
      & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{-0.079}} & \mc{1}{c}{\scriptsize{-0.014}} & \mc{1}{c}{\scriptsize{-0.337}} & \mc{1}{c}{\scriptsize{-0.180}} & \mc{1}{c}{\scriptsize{-0.200}} & \mc{1}{c}{\scriptsize{0.034}} & \mc{1}{c}{\scriptsize{0.071}} & \mc{1}{c}{\scriptsize{0.071}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.020)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(0.569)}} & \mc{1}{c}{\scriptsize{(2.392)}} & \mc{1}{c}{\scriptsize{(1.863)}} & \mc{1}{c}{\scriptsize{(4.265)}} & \mc{1}{c}{\scriptsize{(4.510)}} & \mc{1}{c}{\scriptsize{(2.735)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.409)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{\textbf{(0.058)}}} & \mc{1}{c}{\scriptsize{(0.244)}} & \mc{1}{c}{\scriptsize{(0.190)}} & \mc{1}{c}{\scriptsize{(0.434)}} & \mc{1}{c}{\scriptsize{(0.459)}} & \mc{1}{c}{\scriptsize{(0.278)}} \\  
 
      & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{-0.071}} & \mc{1}{c}{\scriptsize{0.004}} & \mc{1}{c}{\scriptsize{-0.330}} & \mc{1}{c}{\scriptsize{-0.138}} & \mc{1}{c}{\scriptsize{-0.289}} & \mc{1}{c}{\scriptsize{0.041}} & \mc{1}{c}{\scriptsize{0.083}} & \mc{1}{c}{\scriptsize{0.104}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.127)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(3.196)}} & \mc{1}{c}{\scriptsize{(1.794)}} & \mc{1}{c}{\scriptsize{(4.157)}} & \mc{1}{c}{\scriptsize{(4.245)}} & \mc{1}{c}{\scriptsize{(2.735)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{(0.325)}} & \mc{1}{c}{\scriptsize{(0.183)}} & \mc{1}{c}{\scriptsize{(0.423)}} & \mc{1}{c}{\scriptsize{(0.432)}} & \mc{1}{c}{\scriptsize{(0.278)}} \\  
 
      & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{-0.139}} & \mc{1}{c}{\scriptsize{-0.085}} & \mc{1}{c}{\scriptsize{-0.333}} & \mc{1}{c}{\scriptsize{-0.115}} & \mc{1}{c}{\scriptsize{-0.379}} & \mc{1}{c}{\scriptsize{-0.056}} & \mc{1}{c}{\scriptsize{-0.037}} & \mc{1}{c}{\scriptsize{0.142}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.098)}} & \mc{1}{c}{\scriptsize{(4.578)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(1.010)}} & \mc{1}{c}{\scriptsize{(4.157)}} & \mc{1}{c}{\scriptsize{(4.559)}} & \mc{1}{c}{\scriptsize{(2.314)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.214)}} & \mc{1}{c}{\scriptsize{(0.466)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.103)}} & \mc{1}{c}{\scriptsize{(0.423)}} & \mc{1}{c}{\scriptsize{(0.464)}} & \mc{1}{c}{\scriptsize{(0.236)}} \\  
 
      & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{0.056}} & \mc{1}{c}{\scriptsize{0.068}} & \mc{1}{c}{\scriptsize{-0.063}} & \mc{1}{c}{\scriptsize{0.154}} & \mc{1}{c}{\scriptsize{-0.298}} & \mc{1}{c}{\scriptsize{0.092}} & \mc{1}{c}{\scriptsize{0.076}} & \mc{1}{c}{\scriptsize{0.129}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.304)}} & \mc{1}{c}{\scriptsize{(4.578)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(3.971)}} & \mc{1}{c}{\scriptsize{(1.794)}} & \mc{1}{c}{\scriptsize{(3.402)}} & \mc{1}{c}{\scriptsize{(4.510)}} & \mc{1}{c}{\scriptsize{(2.431)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.438)}} & \mc{1}{c}{\scriptsize{(0.466)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.404)}} & \mc{1}{c}{\scriptsize{(0.183)}} & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.459)}} & \mc{1}{c}{\scriptsize{(0.248)}} \\  
 
     \mc{1}{l}{\scriptsize{Father at Home Factor}} & \mc{1}{c}{\scriptsize{2 to 8}} & \mc{1}{c}{\scriptsize{-0.184}} & \mc{1}{c}{\scriptsize{-0.026}} & \mc{1}{c}{\scriptsize{-0.820}} & \mc{1}{c}{\scriptsize{-0.154}} & \mc{1}{c}{\scriptsize{-0.645}} & \mc{1}{c}{\scriptsize{0.010}} & \mc{1}{c}{\scriptsize{0.092}} & \mc{1}{c}{\scriptsize{0.372}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.049)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(1.794)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(4.559)}} & \mc{1}{c}{\scriptsize{(2.314)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.412)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.183)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.464)}} & \mc{1}{c}{\scriptsize{(0.236)}} \\  
 
   \bottomrule
   \end{tabular}
