--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat0_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat0_sd.tex
@@ -6,67 +6,67 @@
 
     \mc{1}{l}{\scriptsize{Std. IQ Test}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{9.528}} & \mc{1}{c}{\scriptsize{10.449}} & \mc{1}{c}{\scriptsize{6.875}} & \mc{1}{c}{\scriptsize{8.111}} & \mc{1}{c}{\scriptsize{11.806}} & \mc{1}{c}{\scriptsize{10.286}} & \mc{1}{c}{\scriptsize{10.853}} & \mc{1}{c}{\scriptsize{10.212}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.049)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.008)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.005)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} \\  
 
      & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{13.410}} & \mc{1}{c}{\scriptsize{14.384}} & \mc{1}{c}{\scriptsize{13.896}} & \mc{1}{c}{\scriptsize{16.827}} & \mc{1}{c}{\scriptsize{21.541}} & \mc{1}{c}{\scriptsize{13.271}} & \mc{1}{c}{\scriptsize{14.118}} & \mc{1}{c}{\scriptsize{11.775}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} \\  
 
      & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{8.756}} & \mc{1}{c}{\scriptsize{8.145}} & \mc{1}{c}{\scriptsize{6.354}} & \mc{1}{c}{\scriptsize{6.785}} & \mc{1}{c}{\scriptsize{12.350}} & \mc{1}{c}{\scriptsize{9.443}} & \mc{1}{c}{\scriptsize{8.911}} & \mc{1}{c}{\scriptsize{7.002}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{(0.108)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.018)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} \\  
 
      & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{12.089}} & \mc{1}{c}{\scriptsize{12.375}} & \mc{1}{c}{\scriptsize{8.950}} & \mc{1}{c}{\scriptsize{10.429}} & \mc{1}{c}{\scriptsize{13.774}} & \mc{1}{c}{\scriptsize{12.986}} & \mc{1}{c}{\scriptsize{12.995}} & \mc{1}{c}{\scriptsize{8.525}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} \\  
 
      & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{8.508}} & \mc{1}{c}{\scriptsize{9.152}} & \mc{1}{c}{\scriptsize{10.411}} & \mc{1}{c}{\scriptsize{13.644}} & \mc{1}{c}{\scriptsize{14.410}} & \mc{1}{c}{\scriptsize{7.964}} & \mc{1}{c}{\scriptsize{8.427}} & \mc{1}{c}{\scriptsize{6.823}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(0.167)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{(0.245)}} & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.196)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.017)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.036)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} \\  
 
      & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{7.697}} & \mc{1}{c}{\scriptsize{7.497}} & \mc{1}{c}{\scriptsize{4.643}} & \mc{1}{c}{\scriptsize{6.615}} & \mc{1}{c}{\scriptsize{9.490}} & \mc{1}{c}{\scriptsize{8.679}} & \mc{1}{c}{\scriptsize{8.002}} & \mc{1}{c}{\scriptsize{5.593}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.186)}} & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(2.059)}} & \mc{1}{c}{\scriptsize{(0.294)}} & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(0.431)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.019)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.210)}} & \mc{1}{c}{\scriptsize{\textbf{(0.030)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} \\  
 
      & \mc{1}{c}{\scriptsize{6}} & \mc{1}{c}{\scriptsize{11.595}} & \mc{1}{c}{\scriptsize{9.843}} & \mc{1}{c}{\scriptsize{5.095}} & \mc{1}{c}{\scriptsize{5.631}} & \mc{1}{c}{\scriptsize{5.523}} & \mc{1}{c}{\scriptsize{13.762}} & \mc{1}{c}{\scriptsize{12.603}} & \mc{1}{c}{\scriptsize{9.776}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(0.922)}} & \mc{1}{c}{\scriptsize{(3.098)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(2.059)}} & \mc{1}{c}{\scriptsize{(6.176)}} & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(3.814)}} & \mc{1}{c}{\scriptsize{(0.225)}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.094)}}} & \mc{1}{c}{\scriptsize{(0.315)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.210)}} & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{\textbf{(0.062)}}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{\textbf{(0.023)}}} \\  
 
      & \mc{1}{c}{\scriptsize{6.6}} & \mc{1}{c}{\scriptsize{5.803}} & \mc{1}{c}{\scriptsize{5.723}} & \mc{1}{c}{\scriptsize{0.831}} & \mc{1}{c}{\scriptsize{2.665}} & \mc{1}{c}{\scriptsize{4.850}} & \mc{1}{c}{\scriptsize{5.916}} & \mc{1}{c}{\scriptsize{5.447}} & \mc{1}{c}{\scriptsize{6.140}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(1.461)}} & \mc{1}{c}{\scriptsize{(2.088)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(4.892)}} & \mc{1}{c}{\scriptsize{(1.255)}} & \mc{1}{c}{\scriptsize{(2.176)}} & \mc{1}{c}{\scriptsize{(0.392)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.149)}} & \mc{1}{c}{\scriptsize{(0.213)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.498)}} & \mc{1}{c}{\scriptsize{(0.128)}} & \mc{1}{c}{\scriptsize{(0.222)}} & \mc{1}{c}{\scriptsize{\textbf{(0.040)}}} \\  
 
      & \mc{1}{c}{\scriptsize{7}} & \mc{1}{c}{\scriptsize{4.390}} & \mc{1}{c}{\scriptsize{7.508}} & \mc{1}{c}{\scriptsize{5.323}} & \mc{1}{c}{\scriptsize{13.674}} & \mc{1}{c}{\scriptsize{5.195}} & \mc{1}{c}{\scriptsize{4.156}} & \mc{1}{c}{\scriptsize{7.043}} & \mc{1}{c}{\scriptsize{5.531}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.902)}} & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(0.971)}} & \mc{1}{c}{\scriptsize{(4.216)}} & \mc{1}{c}{\scriptsize{(2.804)}} & \mc{1}{c}{\scriptsize{(0.686)}} & \mc{1}{c}{\scriptsize{(0.755)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.295)}} & \mc{1}{c}{\scriptsize{\textbf{(0.045)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.099)}}} & \mc{1}{c}{\scriptsize{(0.429)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{\textbf{(0.070)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.077)}}} \\  
 
      & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{4.160}} & \mc{1}{c}{\scriptsize{3.046}} & \mc{1}{c}{\scriptsize{-2.514}} & \mc{1}{c}{\scriptsize{-1.415}} & \mc{1}{c}{\scriptsize{2.713}} & \mc{1}{c}{\scriptsize{4.754}} & \mc{1}{c}{\scriptsize{4.030}} & \mc{1}{c}{\scriptsize{4.799}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.127)}} & \mc{1}{c}{\scriptsize{(5.578)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(6.176)}} & \mc{1}{c}{\scriptsize{(1.775)}} & \mc{1}{c}{\scriptsize{(3.814)}} & \mc{1}{c}{\scriptsize{(0.755)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{(0.568)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.181)}} & \mc{1}{c}{\scriptsize{(0.388)}} & \mc{1}{c}{\scriptsize{\textbf{(0.077)}}} \\  
 
      & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{0.686}} & \mc{1}{c}{\scriptsize{-0.034}} & \mc{1}{c}{\scriptsize{-0.343}} & \mc{1}{c}{\scriptsize{-0.908}} & \mc{1}{c}{\scriptsize{2.744}} & \mc{1}{c}{\scriptsize{0.943}} & \mc{1}{c}{\scriptsize{0.203}} & \mc{1}{c}{\scriptsize{3.579}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.539)}} & \mc{1}{c}{\scriptsize{(7.510)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(6.176)}} & \mc{1}{c}{\scriptsize{(3.667)}} & \mc{1}{c}{\scriptsize{(7.471)}} & \mc{1}{c}{\scriptsize{(1.333)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.764)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.136)}} \\  
 
      & \mc{1}{c}{\scriptsize{15}} & \mc{1}{c}{\scriptsize{4.447}} & \mc{1}{c}{\scriptsize{2.571}} & \mc{1}{c}{\scriptsize{-2.057}} & \mc{1}{c}{\scriptsize{-4.614}} & \mc{1}{c}{\scriptsize{0.529}} & \mc{1}{c}{\scriptsize{6.202}} & \mc{1}{c}{\scriptsize{3.969}} & \mc{1}{c}{\scriptsize{5.123}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.431)}} & \mc{1}{c}{\scriptsize{(5.922)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(6.176)}} & \mc{1}{c}{\scriptsize{(1.333)}} & \mc{1}{c}{\scriptsize{(4.412)}} & \mc{1}{c}{\scriptsize{(1.010)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.248)}} & \mc{1}{c}{\scriptsize{(0.603)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.136)}} & \mc{1}{c}{\scriptsize{(0.449)}} & \mc{1}{c}{\scriptsize{(0.103)}} \\  
 
      & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{1.550}} & \mc{1}{c}{\scriptsize{-1.024}} & \mc{1}{c}{\scriptsize{0.471}} & \mc{1}{c}{\scriptsize{-1.783}} & \mc{1}{c}{\scriptsize{3.124}} & \mc{1}{c}{\scriptsize{2.307}} & \mc{1}{c}{\scriptsize{-0.720}} & \mc{1}{c}{\scriptsize{2.348}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.539)}} & \mc{1}{c}{\scriptsize{(7.510)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(3.176)}} & \mc{1}{c}{\scriptsize{(3.667)}} & \mc{1}{c}{\scriptsize{(7.471)}} & \mc{1}{c}{\scriptsize{(1.333)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.462)}} & \mc{1}{c}{\scriptsize{(0.764)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.323)}} & \mc{1}{c}{\scriptsize{(0.373)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.136)}} \\  
 
     \mc{1}{l}{\scriptsize{IQ Factor}} & \mc{1}{c}{\scriptsize{2 to 5}} & \mc{1}{c}{\scriptsize{0.865}} & \mc{1}{c}{\scriptsize{0.888}} & \mc{1}{c}{\scriptsize{0.735}} & \mc{1}{c}{\scriptsize{0.904}} & \mc{1}{c}{\scriptsize{1.177}} & \mc{1}{c}{\scriptsize{0.903}} & \mc{1}{c}{\scriptsize{0.905}} & \mc{1}{c}{\scriptsize{0.714}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{\textbf{(0.029)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} \\  
+     &  & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.003)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.001)}}} \\  
 
      & \mc{1}{c}{\scriptsize{6 to 12}} & \mc{1}{c}{\scriptsize{0.329}} & \mc{1}{c}{\scriptsize{0.355}} & \mc{1}{c}{\scriptsize{0.349}} & \mc{1}{c}{\scriptsize{0.661}} & \mc{1}{c}{\scriptsize{0.460}} & \mc{1}{c}{\scriptsize{0.323}} & \mc{1}{c}{\scriptsize{0.369}} & \mc{1}{c}{\scriptsize{0.447}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.696)}} & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(4.892)}} & \mc{1}{c}{\scriptsize{(3.510)}} & \mc{1}{c}{\scriptsize{(4.412)}} & \mc{1}{c}{\scriptsize{(1.333)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.498)}} & \mc{1}{c}{\scriptsize{(0.357)}} & \mc{1}{c}{\scriptsize{(0.449)}} & \mc{1}{c}{\scriptsize{(0.136)}} \\  
 
      & \mc{1}{c}{\scriptsize{15 to 21}} & \mc{1}{c}{\scriptsize{-0.276}} & \mc{1}{c}{\scriptsize{-0.055}} & \mc{1}{c}{\scriptsize{0.063}} & \mc{1}{c}{\scriptsize{0.295}} & \mc{1}{c}{\scriptsize{-0.192}} & \mc{1}{c}{\scriptsize{-0.392}} & \mc{1}{c}{\scriptsize{-0.132}} & \mc{1}{c}{\scriptsize{-0.348}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.696)}} & \mc{1}{c}{\scriptsize{(7.510)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(6.176)}} & \mc{1}{c}{\scriptsize{(2.804)}} & \mc{1}{c}{\scriptsize{(7.471)}} & \mc{1}{c}{\scriptsize{(1.333)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.376)}} & \mc{1}{c}{\scriptsize{(0.764)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.629)}} & \mc{1}{c}{\scriptsize{(0.285)}} & \mc{1}{c}{\scriptsize{(0.760)}} & \mc{1}{c}{\scriptsize{(0.136)}} \\  
 
   \bottomrule
   \end{tabular}
