--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat15_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat15_sd.tex
@@ -6,47 +6,47 @@
 
     \mc{1}{l}{\scriptsize{Somatization $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.804}} & \mc{1}{c}{\scriptsize{-4.989}} & \mc{1}{c}{\scriptsize{-3.718}} & \mc{1}{c}{\scriptsize{-6.911}} & \mc{1}{c}{\scriptsize{-4.630}} & \mc{1}{c}{\scriptsize{-2.295}} & \mc{1}{c}{\scriptsize{-4.265}} & \mc{1}{c}{\scriptsize{-3.001}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.147)}} & \mc{1}{c}{\scriptsize{(1.186)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(1.520)}} & \mc{1}{c}{\scriptsize{(2.755)}} & \mc{1}{c}{\scriptsize{(5.343)}} & \mc{1}{c}{\scriptsize{(2.500)}} & \mc{1}{c}{\scriptsize{(2.765)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.422)}} & \mc{1}{c}{\scriptsize{(0.121)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.155)}} & \mc{1}{c}{\scriptsize{(0.280)}} & \mc{1}{c}{\scriptsize{(0.544)}} & \mc{1}{c}{\scriptsize{(0.254)}} & \mc{1}{c}{\scriptsize{(0.281)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-3.066}} & \mc{1}{c}{\scriptsize{-4.118}} & \mc{1}{c}{\scriptsize{-4.852}} & \mc{1}{c}{\scriptsize{-3.901}} & \mc{1}{c}{\scriptsize{-2.063}} & \mc{1}{c}{\scriptsize{-3.252}} & \mc{1}{c}{\scriptsize{-3.428}} & \mc{1}{c}{\scriptsize{-0.687}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.686)}} & \mc{1}{c}{\scriptsize{(5.392)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.706)}} & \mc{1}{c}{\scriptsize{(3.853)}} & \mc{1}{c}{\scriptsize{(5.706)}} & \mc{1}{c}{\scriptsize{(6.196)}} & \mc{1}{c}{\scriptsize{(4.696)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.579)}} & \mc{1}{c}{\scriptsize{(0.549)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.581)}} & \mc{1}{c}{\scriptsize{(0.392)}} & \mc{1}{c}{\scriptsize{(0.581)}} & \mc{1}{c}{\scriptsize{(0.631)}} & \mc{1}{c}{\scriptsize{(0.478)}} \\  
 
     \mc{1}{l}{\scriptsize{Depression $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-2.515}} & \mc{1}{c}{\scriptsize{-0.837}} & \mc{1}{c}{\scriptsize{1.649}} & \mc{1}{c}{\scriptsize{2.453}} & \mc{1}{c}{\scriptsize{-4.310}} & \mc{1}{c}{\scriptsize{-3.636}} & \mc{1}{c}{\scriptsize{-1.634}} & \mc{1}{c}{\scriptsize{-3.669}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.990)}} & \mc{1}{c}{\scriptsize{(6.157)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.902)}} & \mc{1}{c}{\scriptsize{(2.824)}} & \mc{1}{c}{\scriptsize{(3.471)}} & \mc{1}{c}{\scriptsize{(6.206)}} & \mc{1}{c}{\scriptsize{(1.520)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.508)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.601)}} & \mc{1}{c}{\scriptsize{(0.287)}} & \mc{1}{c}{\scriptsize{(0.353)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.155)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.042}} & \mc{1}{c}{\scriptsize{-3.002}} & \mc{1}{c}{\scriptsize{3.148}} & \mc{1}{c}{\scriptsize{2.543}} & \mc{1}{c}{\scriptsize{0.482}} & \mc{1}{c}{\scriptsize{-2.985}} & \mc{1}{c}{\scriptsize{-4.062}} & \mc{1}{c}{\scriptsize{-3.161}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(7.049)}} & \mc{1}{c}{\scriptsize{(6.157)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.765)}} & \mc{1}{c}{\scriptsize{(4.127)}} & \mc{1}{c}{\scriptsize{(5.765)}} & \mc{1}{c}{\scriptsize{(6.186)}} & \mc{1}{c}{\scriptsize{(3.010)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.718)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.587)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.587)}} & \mc{1}{c}{\scriptsize{(0.630)}} & \mc{1}{c}{\scriptsize{(0.306)}} \\  
 
     \mc{1}{l}{\scriptsize{Anxiety $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{0.400}} & \mc{1}{c}{\scriptsize{-0.889}} & \mc{1}{c}{\scriptsize{3.857}} & \mc{1}{c}{\scriptsize{0.042}} & \mc{1}{c}{\scriptsize{-2.925}} & \mc{1}{c}{\scriptsize{-0.333}} & \mc{1}{c}{\scriptsize{-1.561}} & \mc{1}{c}{\scriptsize{-2.737}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(7.049)}} & \mc{1}{c}{\scriptsize{(6.157)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.902)}} & \mc{1}{c}{\scriptsize{(3.853)}} & \mc{1}{c}{\scriptsize{(6.343)}} & \mc{1}{c}{\scriptsize{(6.206)}} & \mc{1}{c}{\scriptsize{(3.010)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.718)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.601)}} & \mc{1}{c}{\scriptsize{(0.392)}} & \mc{1}{c}{\scriptsize{(0.646)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.306)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.847}} & \mc{1}{c}{\scriptsize{-3.766}} & \mc{1}{c}{\scriptsize{1.630}} & \mc{1}{c}{\scriptsize{1.232}} & \mc{1}{c}{\scriptsize{-2.084}} & \mc{1}{c}{\scriptsize{-3.504}} & \mc{1}{c}{\scriptsize{-4.374}} & \mc{1}{c}{\scriptsize{-4.724}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.775)}} & \mc{1}{c}{\scriptsize{(5.520)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.902)}} & \mc{1}{c}{\scriptsize{(3.853)}} & \mc{1}{c}{\scriptsize{(5.608)}} & \mc{1}{c}{\scriptsize{(6.000)}} & \mc{1}{c}{\scriptsize{(1.706)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.690)}} & \mc{1}{c}{\scriptsize{(0.562)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.601)}} & \mc{1}{c}{\scriptsize{(0.392)}} & \mc{1}{c}{\scriptsize{(0.571)}} & \mc{1}{c}{\scriptsize{(0.611)}} & \mc{1}{c}{\scriptsize{(0.174)}} \\  
 
     \mc{1}{l}{\scriptsize{Hostility $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-1.471}} & \mc{1}{c}{\scriptsize{0.233}} & \mc{1}{c}{\scriptsize{2.941}} & \mc{1}{c}{\scriptsize{2.235}} & \mc{1}{c}{\scriptsize{-4.613}} & \mc{1}{c}{\scriptsize{-2.251}} & \mc{1}{c}{\scriptsize{0.172}} & \mc{1}{c}{\scriptsize{-2.544}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.451)}} & \mc{1}{c}{\scriptsize{(6.157)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.902)}} & \mc{1}{c}{\scriptsize{(2.824)}} & \mc{1}{c}{\scriptsize{(5.343)}} & \mc{1}{c}{\scriptsize{(6.206)}} & \mc{1}{c}{\scriptsize{(2.775)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.657)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.601)}} & \mc{1}{c}{\scriptsize{(0.287)}} & \mc{1}{c}{\scriptsize{(0.544)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.282)}} \\  
 
      & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.556}} & \mc{1}{c}{\scriptsize{-2.956}} & \mc{1}{c}{\scriptsize{-1.889}} & \mc{1}{c}{\scriptsize{0.365}} & \mc{1}{c}{\scriptsize{-2.411}} & \mc{1}{c}{\scriptsize{-2.156}} & \mc{1}{c}{\scriptsize{-3.029}} & \mc{1}{c}{\scriptsize{-0.844}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(6.157)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.902)}} & \mc{1}{c}{\scriptsize{(3.853)}} & \mc{1}{c}{\scriptsize{(6.343)}} & \mc{1}{c}{\scriptsize{(6.206)}} & \mc{1}{c}{\scriptsize{(4.696)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.601)}} & \mc{1}{c}{\scriptsize{(0.392)}} & \mc{1}{c}{\scriptsize{(0.646)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.478)}} \\  
 
     \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{0.246}} & \mc{1}{c}{\scriptsize{0.383}} & \mc{1}{c}{\scriptsize{1.978}} & \mc{1}{c}{\scriptsize{0.979}} & \mc{1}{c}{\scriptsize{-4.929}} & \mc{1}{c}{\scriptsize{0.330}} & \mc{1}{c}{\scriptsize{0.854}} & \mc{1}{c}{\scriptsize{-2.485}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(7.049)}} & \mc{1}{c}{\scriptsize{(6.157)}} & \mc{1}{c}{\scriptsize{(9.559)}} & \mc{1}{c}{\scriptsize{(5.902)}} & \mc{1}{c}{\scriptsize{(1.735)}} & \mc{1}{c}{\scriptsize{(6.343)}} & \mc{1}{c}{\scriptsize{(6.206)}} & \mc{1}{c}{\scriptsize{(3.010)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.718)}} & \mc{1}{c}{\scriptsize{(0.627)}} & \mc{1}{c}{\scriptsize{(0.973)}} & \mc{1}{c}{\scriptsize{(0.601)}} & \mc{1}{c}{\scriptsize{(0.177)}} & \mc{1}{c}{\scriptsize{(0.646)}} & \mc{1}{c}{\scriptsize{(0.632)}} & \mc{1}{c}{\scriptsize{(0.306)}} \\  
 
     \mc{1}{l}{\scriptsize{Global Severity Index $t$-Score (BSI 18)}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-1.675}} & \mc{1}{c}{\scriptsize{-3.372}} & \mc{1}{c}{\scriptsize{0.111}} & \mc{1}{c}{\scriptsize{0.283}} & \mc{1}{c}{\scriptsize{-0.514}} & \mc{1}{c}{\scriptsize{-2.989}} & \mc{1}{c}{\scriptsize{-3.746}} & \mc{1}{c}{\scriptsize{-3.446}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.480)}} & \mc{1}{c}{\scriptsize{(3.127)}} & \mc{1}{c}{\scriptsize{(9.667)}} & \mc{1}{c}{\scriptsize{(3.461)}} & \mc{1}{c}{\scriptsize{(4.127)}} & \mc{1}{c}{\scriptsize{(3.676)}} & \mc{1}{c}{\scriptsize{(3.431)}} & \mc{1}{c}{\scriptsize{(1.127)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.318)}} & \mc{1}{c}{\scriptsize{(0.984)}} & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.420)}} & \mc{1}{c}{\scriptsize{(0.374)}} & \mc{1}{c}{\scriptsize{(0.349)}} & \mc{1}{c}{\scriptsize{(0.115)}} \\  
 
     \mc{1}{l}{\scriptsize{BSI Factor}} & \mc{1}{c}{\scriptsize{21 to Mid-30s}} & \mc{1}{c}{\scriptsize{-0.130}} & \mc{1}{c}{\scriptsize{-0.097}} & \mc{1}{c}{\scriptsize{-0.025}} & \mc{1}{c}{\scriptsize{0.083}} & \mc{1}{c}{\scriptsize{-0.476}} & \mc{1}{c}{\scriptsize{-0.170}} & \mc{1}{c}{\scriptsize{-0.100}} & \mc{1}{c}{\scriptsize{-0.468}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.480)}} & \mc{1}{c}{\scriptsize{(3.745)}} & \mc{1}{c}{\scriptsize{(9.667)}} & \mc{1}{c}{\scriptsize{(3.461)}} & \mc{1}{c}{\scriptsize{(1.725)}} & \mc{1}{c}{\scriptsize{(3.676)}} & \mc{1}{c}{\scriptsize{(4.069)}} & \mc{1}{c}{\scriptsize{(0.588)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.456)}} & \mc{1}{c}{\scriptsize{(0.381)}} & \mc{1}{c}{\scriptsize{(0.984)}} & \mc{1}{c}{\scriptsize{(0.352)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{(0.374)}} & \mc{1}{c}{\scriptsize{(0.414)}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} \\  
 
   \bottomrule
   \end{tabular}
