--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat2_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat2_sd.tex
@@ -6,31 +6,31 @@
 
     \mc{1}{l}{\scriptsize{HOME Score}} & \mc{1}{c}{\scriptsize{0.5}} & \mc{1}{c}{\scriptsize{0.372}} & \mc{1}{c}{\scriptsize{0.313}} & \mc{1}{c}{\scriptsize{0.944}} & \mc{1}{c}{\scriptsize{0.168}} & \mc{1}{c}{\scriptsize{0.892}} & \mc{1}{c}{\scriptsize{0.143}} & \mc{1}{c}{\scriptsize{0.164}} & \mc{1}{c}{\scriptsize{0.193}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(3.275)}} & \mc{1}{c}{\scriptsize{(5.765)}} & \mc{1}{c}{\scriptsize{(2.549)}} & \mc{1}{c}{\scriptsize{(6.618)}} & \mc{1}{c}{\scriptsize{(7.255)}} & \mc{1}{c}{\scriptsize{(7.912)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(0.333)}} & \mc{1}{c}{\scriptsize{(0.587)}} & \mc{1}{c}{\scriptsize{(0.259)}} & \mc{1}{c}{\scriptsize{(0.674)}} & \mc{1}{c}{\scriptsize{(0.739)}} & \mc{1}{c}{\scriptsize{(0.805)}} \\  
 
      & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{-0.500}} & \mc{1}{c}{\scriptsize{-0.529}} & \mc{1}{c}{\scriptsize{0.431}} & \mc{1}{c}{\scriptsize{-0.348}} & \mc{1}{c}{\scriptsize{2.963}} & \mc{1}{c}{\scriptsize{-0.766}} & \mc{1}{c}{\scriptsize{-0.711}} & \mc{1}{c}{\scriptsize{0.437}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(1.275)}} & \mc{1}{c}{\scriptsize{(6.245)}} & \mc{1}{c}{\scriptsize{(7.196)}} & \mc{1}{c}{\scriptsize{(7.451)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.130)}} & \mc{1}{c}{\scriptsize{(0.636)}} & \mc{1}{c}{\scriptsize{(0.733)}} & \mc{1}{c}{\scriptsize{(0.758)}} \\  
 
      & \mc{1}{c}{\scriptsize{2.5}} & \mc{1}{c}{\scriptsize{0.141}} & \mc{1}{c}{\scriptsize{0.736}} & \mc{1}{c}{\scriptsize{1.654}} & \mc{1}{c}{\scriptsize{3.429}} & \mc{1}{c}{\scriptsize{3.732}} & \mc{1}{c}{\scriptsize{-0.292}} & \mc{1}{c}{\scriptsize{0.473}} & \mc{1}{c}{\scriptsize{-0.051}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(1.882)}} & \mc{1}{c}{\scriptsize{(0.206)}} & \mc{1}{c}{\scriptsize{(6.618)}} & \mc{1}{c}{\scriptsize{(7.255)}} & \mc{1}{c}{\scriptsize{(7.912)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.192)}} & \mc{1}{c}{\scriptsize{\textbf{(0.021)}}} & \mc{1}{c}{\scriptsize{(0.674)}} & \mc{1}{c}{\scriptsize{(0.739)}} & \mc{1}{c}{\scriptsize{(0.805)}} \\  
 
      & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{1.404}} & \mc{1}{c}{\scriptsize{1.280}} & \mc{1}{c}{\scriptsize{2.897}} & \mc{1}{c}{\scriptsize{3.683}} & \mc{1}{c}{\scriptsize{8.842}} & \mc{1}{c}{\scriptsize{0.962}} & \mc{1}{c}{\scriptsize{0.874}} & \mc{1}{c}{\scriptsize{0.324}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(0.108)}} & \mc{1}{c}{\scriptsize{(6.618)}} & \mc{1}{c}{\scriptsize{(7.255)}} & \mc{1}{c}{\scriptsize{(7.912)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.011)}}} & \mc{1}{c}{\scriptsize{(0.674)}} & \mc{1}{c}{\scriptsize{(0.739)}} & \mc{1}{c}{\scriptsize{(0.805)}} \\  
 
      & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{1.146}} & \mc{1}{c}{\scriptsize{1.677}} & \mc{1}{c}{\scriptsize{3.312}} & \mc{1}{c}{\scriptsize{5.224}} & \mc{1}{c}{\scriptsize{8.377}} & \mc{1}{c}{\scriptsize{0.527}} & \mc{1}{c}{\scriptsize{1.547}} & \mc{1}{c}{\scriptsize{0.337}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(5.980)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(0.176)}} & \mc{1}{c}{\scriptsize{(6.618)}} & \mc{1}{c}{\scriptsize{(6.451)}} & \mc{1}{c}{\scriptsize{(7.912)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.609)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.018)}}} & \mc{1}{c}{\scriptsize{(0.674)}} & \mc{1}{c}{\scriptsize{(0.657)}} & \mc{1}{c}{\scriptsize{(0.805)}} \\  
 
      & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{1.548}} & \mc{1}{c}{\scriptsize{0.976}} & \mc{1}{c}{\scriptsize{-0.898}} & \mc{1}{c}{\scriptsize{1.266}} & \mc{1}{c}{\scriptsize{3.642}} & \mc{1}{c}{\scriptsize{2.062}} & \mc{1}{c}{\scriptsize{0.969}} & \mc{1}{c}{\scriptsize{0.204}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.971)}} & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(5.765)}} & \mc{1}{c}{\scriptsize{(1.873)}} & \mc{1}{c}{\scriptsize{(5.343)}} & \mc{1}{c}{\scriptsize{(7.255)}} & \mc{1}{c}{\scriptsize{(7.912)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.608)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.587)}} & \mc{1}{c}{\scriptsize{(0.191)}} & \mc{1}{c}{\scriptsize{(0.544)}} & \mc{1}{c}{\scriptsize{(0.739)}} & \mc{1}{c}{\scriptsize{(0.805)}} \\  
 
     \mc{1}{l}{\scriptsize{HOME Factor}} & \mc{1}{c}{\scriptsize{0.5 to 8}} & \mc{1}{c}{\scriptsize{0.287}} & \mc{1}{c}{\scriptsize{0.042}} & \mc{1}{c}{\scriptsize{0.131}} & \mc{1}{c}{\scriptsize{0.121}} & \mc{1}{c}{\scriptsize{0.752}} & \mc{1}{c}{\scriptsize{0.320}} & \mc{1}{c}{\scriptsize{0.052}} & \mc{1}{c}{\scriptsize{0.199}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.314)}} & \mc{1}{c}{\scriptsize{(6.833)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(0.431)}} & \mc{1}{c}{\scriptsize{(4.039)}} & \mc{1}{c}{\scriptsize{(7.255)}} & \mc{1}{c}{\scriptsize{(5.029)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.439)}} & \mc{1}{c}{\scriptsize{(0.696)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{\textbf{(0.044)}}} & \mc{1}{c}{\scriptsize{(0.411)}} & \mc{1}{c}{\scriptsize{(0.739)}} & \mc{1}{c}{\scriptsize{(0.512)}} \\  
 
   \bottomrule
   \end{tabular}
