--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat3_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat3_sd.tex
@@ -6,27 +6,27 @@
 
     \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{2}} & \mc{1}{c}{\scriptsize{-0.018}} & \mc{1}{c}{\scriptsize{0.074}} & \mc{1}{c}{\scriptsize{-0.282}} & \mc{1}{c}{\scriptsize{-0.266}} & \mc{1}{c}{\scriptsize{-0.173}} & \mc{1}{c}{\scriptsize{0.057}} & \mc{1}{c}{\scriptsize{0.148}} & \mc{1}{c}{\scriptsize{0.130}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.000)}} & \mc{1}{c}{\scriptsize{(4.931)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(1.686)}} & \mc{1}{c}{\scriptsize{(4.755)}} & \mc{1}{c}{\scriptsize{(2.333)}} & \mc{1}{c}{\scriptsize{(1.510)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.509)}} & \mc{1}{c}{\scriptsize{(0.502)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.172)}} & \mc{1}{c}{\scriptsize{(0.484)}} & \mc{1}{c}{\scriptsize{(0.238)}} & \mc{1}{c}{\scriptsize{(0.154)}} \\  
 
      & \mc{1}{c}{\scriptsize{3}} & \mc{1}{c}{\scriptsize{-0.076}} & \mc{1}{c}{\scriptsize{-0.079}} & \mc{1}{c}{\scriptsize{-0.243}} & \mc{1}{c}{\scriptsize{-0.270}} & \mc{1}{c}{\scriptsize{-0.284}} & \mc{1}{c}{\scriptsize{-0.029}} & \mc{1}{c}{\scriptsize{-0.034}} & \mc{1}{c}{\scriptsize{0.079}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.314)}} & \mc{1}{c}{\scriptsize{(4.931)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(0.471)}} & \mc{1}{c}{\scriptsize{(5.127)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(2.363)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.439)}} & \mc{1}{c}{\scriptsize{(0.502)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.048)}}} & \mc{1}{c}{\scriptsize{(0.522)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{(0.241)}} \\  
 
      & \mc{1}{c}{\scriptsize{4}} & \mc{1}{c}{\scriptsize{-0.075}} & \mc{1}{c}{\scriptsize{-0.080}} & \mc{1}{c}{\scriptsize{-0.339}} & \mc{1}{c}{\scriptsize{-0.337}} & \mc{1}{c}{\scriptsize{-0.319}} &  & \mc{1}{c}{\scriptsize{-0.016}} & \mc{1}{c}{\scriptsize{0.101}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.314)}} & \mc{1}{c}{\scriptsize{(4.931)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(0.461)}} &  & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(2.275)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.439)}} & \mc{1}{c}{\scriptsize{(0.502)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} &  & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{(0.232)}} \\  
 
      & \mc{1}{c}{\scriptsize{5}} & \mc{1}{c}{\scriptsize{-0.057}} & \mc{1}{c}{\scriptsize{-0.029}} & \mc{1}{c}{\scriptsize{-0.429}} & \mc{1}{c}{\scriptsize{-0.474}} & \mc{1}{c}{\scriptsize{-0.366}} & \mc{1}{c}{\scriptsize{0.036}} & \mc{1}{c}{\scriptsize{0.051}} & \mc{1}{c}{\scriptsize{0.062}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.745)}} & \mc{1}{c}{\scriptsize{(5.088)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(0.343)}} & \mc{1}{c}{\scriptsize{(5.127)}} & \mc{1}{c}{\scriptsize{(5.216)}} & \mc{1}{c}{\scriptsize{(2.363)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.483)}} & \mc{1}{c}{\scriptsize{(0.518)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.035)}}} & \mc{1}{c}{\scriptsize{(0.522)}} & \mc{1}{c}{\scriptsize{(0.531)}} & \mc{1}{c}{\scriptsize{(0.241)}} \\  
 
      & \mc{1}{c}{\scriptsize{8}} & \mc{1}{c}{\scriptsize{0.037}} & \mc{1}{c}{\scriptsize{0.065}} & \mc{1}{c}{\scriptsize{-0.177}} & \mc{1}{c}{\scriptsize{-0.066}} & \mc{1}{c}{\scriptsize{-0.179}} & \mc{1}{c}{\scriptsize{0.123}} & \mc{1}{c}{\scriptsize{0.093}} & \mc{1}{c}{\scriptsize{0.096}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(5.000)}} & \mc{1}{c}{\scriptsize{(4.931)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(3.863)}} & \mc{1}{c}{\scriptsize{(1.686)}} & \mc{1}{c}{\scriptsize{(3.088)}} & \mc{1}{c}{\scriptsize{(4.637)}} & \mc{1}{c}{\scriptsize{(2.275)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.509)}} & \mc{1}{c}{\scriptsize{(0.502)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(0.393)}} & \mc{1}{c}{\scriptsize{(0.172)}} & \mc{1}{c}{\scriptsize{(0.314)}} & \mc{1}{c}{\scriptsize{(0.472)}} & \mc{1}{c}{\scriptsize{(0.232)}} \\  
 
     \mc{1}{l}{\scriptsize{Father at Home Factor}} & \mc{1}{c}{\scriptsize{2 to 8}} & \mc{1}{c}{\scriptsize{-0.122}} & \mc{1}{c}{\scriptsize{-0.044}} & \mc{1}{c}{\scriptsize{-0.750}} & \mc{1}{c}{\scriptsize{-0.873}} & \mc{1}{c}{\scriptsize{-0.778}} & \mc{1}{c}{\scriptsize{0.097}} & \mc{1}{c}{\scriptsize{0.151}} & \mc{1}{c}{\scriptsize{0.241}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.804)}} & \mc{1}{c}{\scriptsize{(5.088)}} & \mc{1}{c}{\scriptsize{(1.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(5.127)}} & \mc{1}{c}{\scriptsize{(4.725)}} & \mc{1}{c}{\scriptsize{(2.275)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.489)}} & \mc{1}{c}{\scriptsize{(0.518)}} & \mc{1}{c}{\scriptsize{(0.203)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.047)}}} & \mc{1}{c}{\scriptsize{(0.522)}} & \mc{1}{c}{\scriptsize{(0.481)}} & \mc{1}{c}{\scriptsize{(0.232)}} \\  
 
   \bottomrule
   \end{tabular}
