--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat7_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat7_sd.tex
@@ -6,27 +6,27 @@
 
     \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.119}} & \mc{1}{c}{\scriptsize{0.182}} & \mc{1}{c}{\scriptsize{-0.029}} & \mc{1}{c}{\scriptsize{0.048}} & \mc{1}{c}{\scriptsize{0.204}} & \mc{1}{c}{\scriptsize{0.176}} & \mc{1}{c}{\scriptsize{0.231}} & \mc{1}{c}{\scriptsize{0.162}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.186)}} & \mc{1}{c}{\scriptsize{(1.618)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(2.118)}} & \mc{1}{c}{\scriptsize{(2.882)}} & \mc{1}{c}{\scriptsize{(1.088)}} & \mc{1}{c}{\scriptsize{(1.147)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.426)}} & \mc{1}{c}{\scriptsize{(0.165)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.216)}} & \mc{1}{c}{\scriptsize{(0.293)}} & \mc{1}{c}{\scriptsize{(0.111)}} & \mc{1}{c}{\scriptsize{(0.117)}} \\  
 
     \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{-1,672}} & \mc{1}{c}{\scriptsize{-5,542}} & \mc{1}{c}{\scriptsize{-3,951}} & \mc{1}{c}{\scriptsize{-13,251}} & \mc{1}{c}{\scriptsize{1,771}} & \mc{1}{c}{\scriptsize{-1,527}} & \mc{1}{c}{\scriptsize{-4,886}} & \mc{1}{c}{\scriptsize{-1,506}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(3.422)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(0.775)}} & \mc{1}{c}{\scriptsize{(3.225)}} & \mc{1}{c}{\scriptsize{(6.471)}} & \mc{1}{c}{\scriptsize{(4.873)}} & \mc{1}{c}{\scriptsize{(3.941)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.348)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.328)}} & \mc{1}{c}{\scriptsize{(0.659)}} & \mc{1}{c}{\scriptsize{(0.496)}} & \mc{1}{c}{\scriptsize{(0.401)}} \\  
 
      & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{19,810}} & \mc{1}{c}{\scriptsize{27,373}} & \mc{1}{c}{\scriptsize{17,909}} & \mc{1}{c}{\scriptsize{42,616}} & \mc{1}{c}{\scriptsize{21,153}} & \mc{1}{c}{\scriptsize{20,065}} & \mc{1}{c}{\scriptsize{26,715}} & \mc{1}{c}{\scriptsize{11,164}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.402)}} & \mc{1}{c}{\scriptsize{(4.333)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(2.696)}} & \mc{1}{c}{\scriptsize{(1.176)}} & \mc{1}{c}{\scriptsize{(3.029)}} & \mc{1}{c}{\scriptsize{(4.873)}} & \mc{1}{c}{\scriptsize{(3.941)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.346)}} & \mc{1}{c}{\scriptsize{(0.441)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.274)}} & \mc{1}{c}{\scriptsize{(0.120)}} & \mc{1}{c}{\scriptsize{(0.308)}} & \mc{1}{c}{\scriptsize{(0.496)}} & \mc{1}{c}{\scriptsize{(0.401)}} \\  
 
     \mc{1}{l}{\scriptsize{Public-Transfer Income}} & \mc{1}{c}{\scriptsize{21}} & \mc{1}{c}{\scriptsize{315}} & \mc{1}{c}{\scriptsize{8.274}} & \mc{1}{c}{\scriptsize{1,376}} & \mc{1}{c}{\scriptsize{1,587}} & \mc{1}{c}{\scriptsize{-1,613}} & \mc{1}{c}{\scriptsize{-58.901}} & \mc{1}{c}{\scriptsize{-327}} & \mc{1}{c}{\scriptsize{-816}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.814)}} & \mc{1}{c}{\scriptsize{(6.147)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(2.853)}} & \mc{1}{c}{\scriptsize{(3.147)}} & \mc{1}{c}{\scriptsize{(6.471)}} & \mc{1}{c}{\scriptsize{(6.294)}} & \mc{1}{c}{\scriptsize{(3.941)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.490)}} & \mc{1}{c}{\scriptsize{(0.626)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.320)}} & \mc{1}{c}{\scriptsize{(0.659)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{(0.401)}} \\  
 
      & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{-530}} & \mc{1}{c}{\scriptsize{-149}} & \mc{1}{c}{\scriptsize{287}} & \mc{1}{c}{\scriptsize{175}} & \mc{1}{c}{\scriptsize{-1,598}} & \mc{1}{c}{\scriptsize{-279}} & \mc{1}{c}{\scriptsize{-121}} & \mc{1}{c}{\scriptsize{-1,687}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.618)}} & \mc{1}{c}{\scriptsize{(6.147)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(2.853)}} & \mc{1}{c}{\scriptsize{(3.147)}} & \mc{1}{c}{\scriptsize{(6.471)}} & \mc{1}{c}{\scriptsize{(6.294)}} & \mc{1}{c}{\scriptsize{(3.480)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.470)}} & \mc{1}{c}{\scriptsize{(0.626)}} & \mc{1}{c}{\scriptsize{\textbf{(0.004)}}} & \mc{1}{c}{\scriptsize{(0.290)}} & \mc{1}{c}{\scriptsize{(0.320)}} & \mc{1}{c}{\scriptsize{(0.659)}} & \mc{1}{c}{\scriptsize{(0.641)}} & \mc{1}{c}{\scriptsize{(0.354)}} \\  
 
     \mc{1}{l}{\scriptsize{Employment Factor}} & \mc{1}{c}{\scriptsize{21 to 30}} & \mc{1}{c}{\scriptsize{0.501}} & \mc{1}{c}{\scriptsize{0.331}} & \mc{1}{c}{\scriptsize{0.053}} & \mc{1}{c}{\scriptsize{-0.470}} & \mc{1}{c}{\scriptsize{0.610}} & \mc{1}{c}{\scriptsize{0.644}} & \mc{1}{c}{\scriptsize{0.517}} & \mc{1}{c}{\scriptsize{0.467}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.186)}} & \mc{1}{c}{\scriptsize{(4.863)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(3.147)}} & \mc{1}{c}{\scriptsize{(3.706)}} & \mc{1}{c}{\scriptsize{(4.873)}} & \mc{1}{c}{\scriptsize{(3.618)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.426)}} & \mc{1}{c}{\scriptsize{(0.495)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.320)}} & \mc{1}{c}{\scriptsize{(0.377)}} & \mc{1}{c}{\scriptsize{(0.496)}} & \mc{1}{c}{\scriptsize{(0.368)}} \\  
 
   \bottomrule
   \end{tabular}
