--- a/AppResOutput/abccare_appendix/current/rslt_pooled_cat8_sd.tex
+++ b/AppResOutput/abccare_appendix/current/rslt_pooled_cat8_sd.tex
@@ -6,19 +6,19 @@
 
     \mc{1}{l}{\scriptsize{Total Felony Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.196}} & \mc{1}{c}{\scriptsize{0.392}} & \mc{1}{c}{\scriptsize{0.946}} & \mc{1}{c}{\scriptsize{1.481}} & \mc{1}{c}{\scriptsize{0.209}} & \mc{1}{c}{\scriptsize{0.017}} & \mc{1}{c}{\scriptsize{0.096}} & \mc{1}{c}{\scriptsize{0.187}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.314)}} & \mc{1}{c}{\scriptsize{(4.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(1.931)}} & \mc{1}{c}{\scriptsize{(4.569)}} & \mc{1}{c}{\scriptsize{(5.127)}} & \mc{1}{c}{\scriptsize{(5.461)}} & \mc{1}{c}{\scriptsize{(4.059)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.439)}} & \mc{1}{c}{\scriptsize{(0.508)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.197)}} & \mc{1}{c}{\scriptsize{(0.465)}} & \mc{1}{c}{\scriptsize{(0.522)}} & \mc{1}{c}{\scriptsize{(0.556)}} & \mc{1}{c}{\scriptsize{(0.413)}} \\  
 
     \mc{1}{l}{\scriptsize{Total Misdemeanor Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.501}} & \mc{1}{c}{\scriptsize{-0.243}} & \mc{1}{c}{\scriptsize{-0.251}} & \mc{1}{c}{\scriptsize{-0.193}} & \mc{1}{c}{\scriptsize{-1.266}} & \mc{1}{c}{\scriptsize{-0.666}} & \mc{1}{c}{\scriptsize{-0.276}} & \mc{1}{c}{\scriptsize{-0.308}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(3.745)}} & \mc{1}{c}{\scriptsize{(4.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(3.549)}} & \mc{1}{c}{\scriptsize{(2.941)}} & \mc{1}{c}{\scriptsize{(2.961)}} & \mc{1}{c}{\scriptsize{(5.461)}} & \mc{1}{c}{\scriptsize{(4.039)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.381)}} & \mc{1}{c}{\scriptsize{(0.508)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.361)}} & \mc{1}{c}{\scriptsize{(0.299)}} & \mc{1}{c}{\scriptsize{(0.301)}} & \mc{1}{c}{\scriptsize{(0.556)}} & \mc{1}{c}{\scriptsize{(0.411)}} \\  
 
     \mc{1}{l}{\scriptsize{Total Years Incarcerated}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.348}} & \mc{1}{c}{\scriptsize{0.480}} & \mc{1}{c}{\scriptsize{0.553}} & \mc{1}{c}{\scriptsize{0.662}} & \mc{1}{c}{\scriptsize{0.369}} & \mc{1}{c}{\scriptsize{0.338}} & \mc{1}{c}{\scriptsize{0.495}} & \mc{1}{c}{\scriptsize{0.216}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(2.216)}} & \mc{1}{c}{\scriptsize{(2.608)}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{(0.902)}} & \mc{1}{c}{\scriptsize{(0.255)}} & \mc{1}{c}{\scriptsize{(2.696)}} & \mc{1}{c}{\scriptsize{(3.020)}} & \mc{1}{c}{\scriptsize{(2.471)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.226)}} & \mc{1}{c}{\scriptsize{(0.265)}} & \mc{1}{c}{\scriptsize{\textbf{(0.002)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.274)}} & \mc{1}{c}{\scriptsize{(0.307)}} & \mc{1}{c}{\scriptsize{(0.251)}} \\  
 
     \mc{1}{l}{\scriptsize{Crime Factor}} & \mc{1}{c}{\scriptsize{30 to Mid-30s}} & \mc{1}{c}{\scriptsize{0.192}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.560}} & \mc{1}{c}{\scriptsize{0.729}} & \mc{1}{c}{\scriptsize{0.000}} & \mc{1}{c}{\scriptsize{0.116}} & \mc{1}{c}{\scriptsize{0.318}} & \mc{1}{c}{\scriptsize{0.152}} \\  
 
-     &  & \mc{1}{c}{\scriptsize{(4.314)}} & \mc{1}{c}{\scriptsize{(4.990)}} & \mc{1}{c}{\scriptsize{(9.824)}} & \mc{1}{c}{\scriptsize{(9.814)}} & \mc{1}{c}{\scriptsize{(4.873)}} & \mc{1}{c}{\scriptsize{(5.127)}} & \mc{1}{c}{\scriptsize{(5.461)}} & \mc{1}{c}{\scriptsize{(4.059)}} \\  
+     &  & \mc{1}{c}{\scriptsize{(0.439)}} & \mc{1}{c}{\scriptsize{(0.508)}} & \mc{1}{c}{\scriptsize{(1.000)}} & \mc{1}{c}{\scriptsize{(0.999)}} & \mc{1}{c}{\scriptsize{(0.496)}} & \mc{1}{c}{\scriptsize{(0.522)}} & \mc{1}{c}{\scriptsize{(0.556)}} & \mc{1}{c}{\scriptsize{(0.413)}} \\  
 
   \bottomrule
   \end{tabular}
